CI images update

--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-04 03:16:46
+lastsearch = 2024-08-04 06:30:12
 
 [www.galottery.com]
 match = -7.7%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx-y9-y-&sig=ACfU3U3sOUB0_u9k1XtB6xKwF0kQUCdcsQ&hl=en&sa=X&ved=2ahUKEwiG-ZD80dmHAxVyFFkFHfkIAMMQ6AF6BAgbEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gx-za5zY&sig=ACfU3U2TjOWbuTFsJgRmMpU8K68l8YTxKQ&hl=en&sa=X&ved=2ahUKEwjnpNqa_dmHAxWIFDQIHc7gFEkQ6AF6BAgjEAM
 
 [ottawabraves.com]
 match = -292.3%%
