--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-03 22:55:55
+lastsearch = 2024-08-04 06:34:01
 
 [ninhouse.vn]
-match = -161.5%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = -146.2%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOopmdqlE4yAafqiawcBb4WG3bmGwklGMGKTmKZsaNT0wgLqwD7b9
 
 [www.lamido.vn]
 match = 46.2%%
@@ -24,7 +24,7 @@ url = https://www.translate.com/vietnamese-english
 [ru9.vn]
 match = -107.7%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOoqHGHpzuyyObcurWe70qRQ9SKK8AkUgS9cpFZYppxQ1B-2sbBDI
 
 [www.reddit.com]
 match = -230.8%%
@@ -84,7 +84,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/
 [shopee.vn]
 match = -153.8%%
 title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
+url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
 
 [songhong.info]
 match = -161.5%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOop7Nc32BeZrOy943e0W7KFjBAVP8M1pMoKCOuRb50WpqgVmbq8w
 
 [www.everonvn.vn]
 match = 15.4%%
@@ -174,7 +174,7 @@ url = https://demolympia.com/chan-ga-goi-khach-san-olympia-cotton-lua-7-mon-mau-
 [aeoneshop.com]
 match = -16.7%%
 title = Vỏ Gối
-url = https://aeoneshop.com/products/category/137/goi---vo-goi
+url = https://aeoneshop.com/products/category/137/goi---vo-goi?srsltid=AfmBOoqyv6w2uYOqCLeVxOCXUieuqbVbpgYYYscvJw9FqNG1ZfqZMKHl
 
 [tanmydesign.com]
 match = -100.0%%
