--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-04 05:01:19
+lastsearch = 2024-08-04 06:35:04
 
 [everonvn.com.vn]
 match = 7.4%%
 title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia?srsltid=AfmBOorvR4B2EaRjwlHtMXYz0N1p42W5nN6sS6ri0jzYXszh43YuElko
+url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/?srsltid=AfmBOooBdmSyA-RaWHfDfQh19U2gtxUJ837PR44tFfjeeawFDSuE7Tpf
+url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOooRDzjAGZpZRS84P0H4II_N7rTxMkblxtMfyhmrw504w6ItOczH
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
