--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-04 04:34:15
+lastsearch = 2024-08-04 06:36:26
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -37,9 +37,9 @@ title = 3:16 Healthcare | Bremen GA
 url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -238.5%%
+title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
+url = https://www.youtube.com/watch?v=tJOSML4nQWo
 
 [www.regmovies.com]
 match = -215.4%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -261.5%%
-title = Deutsch 0460-202-20141 |TE CONNECTIVITY | Prowireusa
-url = https://www.deutschconnectorstore.com/p-72-deutsch-0460-202-20141-contact-22-18-ga.html
+match = -200.0%%
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.deutschconnectorstore.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
