--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-08-04 03:12:21
+lastsearch = 2024-08-04 06:44:45
 
 [thamaulac.com.vn]
-match = -88.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -22.2%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [xoptraisan.info]
 match = -138.9%%
@@ -57,9 +57,9 @@ title = Thảm xốp trơn đơn màu 60x60
 url = https://thamht.vn/products/tham-lot-tre-nam-choi
 
 [tiki.vn]
-match = -127.8%%
-title = Mua 10 tấm xốp ghép, mặt thảm nỉ kích thước 60cm x ...
-url = https://tiki.vn/10-tam-xop-ghep-mat-tham-ni-kich-thuoc-60cm-x-60cm-x-0-6cm-tam-mau-xam-p74677292.html
+match = -111.1%%
+title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
 
 [thamtretho.com]
 match = -66.7%%
