--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-08-04 03:26:00
+lastsearch = 2024-08-04 06:28:29
 
 [www.diepxuan.com]
 match = 26.3%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOorDuxatqjbOoqi9mMk28-Pe-pNI-Z9OiHFtR5oij95ZLraBeXNa
+url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [demkhangduy.com]
 match = -25.0%%
@@ -19,7 +19,7 @@ url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 [demxanh.com]
 match = -100.0%%
 title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html?srsltid=AfmBOorNYPmgPS1crGS6lmfeArYngstYGEiU8eqqNxJCN1LxHoc5Ma2T
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
 
 [tuananh.vn]
 match = 10.0%%
