CI images update

--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-03 23:47:05
+lastsearch = 2024-08-04 06:52:47
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -235,4 +235,9 @@ url = https://www.plkc.edu.hk/centenarian/scholarships/
 match = -92.3%%
 title = Vallée de Mai Nature Reserve
 url = https://whc.unesco.org/en/list/261/
+
+[www.gettyimages.com]
+match = -184.6%%
+title = 133 Chan Hoi Wan Stock Photos & High-Res Pictures
+url = https://www.gettyimages.com/photos/chan-hoi-wan
 
