--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-04 05:56:21
+lastsearch = 2024-08-04 06:58:01
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Vietnamese_language
 [books.google.com]
 match = -43.5%%
 title = Vietnam - Page 187 - Google Books Result
-url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrZabT3H&sig=ACfU3U21IbsT2a5BkUPV09exXmESu71Q5A&hl=en&sa=X&ved=2ahUKEwiUn_7R9dmHAxVjEFkFHYHoBPEQ6AF6BAgkEAM
+url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u+nh+a+thai+binh+10&source=bl&ots=UpYrZafQ3H&sig=ACfU3U0S6H-S15D0SS6gNRvSUOlZ9TMYpQ&hl=en&sa=X&ved=2ahUKEwjojKG2g9qHAxVMg4kEHdplDkwQ6AF6BAgiEAM
 
 [www.travelweekly.com]
 match = -56.5%%
