--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-04 05:15:07
+lastsearch = 2024-08-04 06:55:32
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Ruột gối kê WDR lông vũ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html
+match = 0.0%%
+title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -27,9 +27,9 @@ title = 常識科
 url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpageid=44&cpmid=176&rurl=https://xn--b1aecnalzhcpg.xn--p1ai/9825461fe43y
 
 [demxanh.com]
-match = -3.6%%
-title = Bộ ga gối chun chần Misuko Tencel Rio 02
-url = https://demxanh.com/bo-ga-goi-chun-chan-misuko-tencel-rio-02.html
+match = -42.9%%
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 03
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-03.html
 
 [stevematuro.com]
 match = -39.3%%
