--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-04 03:19:34
+lastsearch = 2024-08-04 06:59:45
 
 [www.diepxuan.com]
-match = -31.2%%
-title = Túi Warmdream 180x200x09 - Điệp Xuân
-url = https://www.diepxuan.com/tui-warmdream-180x200x09.html
+match = 18.8%%
+title = Túi nệm - Điệp Xuân
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOooqFRwyDJFPn_I_1L5l2u7A3RaCxLyN4jDk2ClcqdK1xWg72i49
 
 [demxanh.com]
 match = -181.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -143.8%%
-title = Gloss for life #beautytok #hudabeauty #lip ...
-url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
+match = -31.2%%
+title = Huda Beauty Best Lip Liner
+url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
 
 [archiveofourown.org]
 match = -137.5%%
