--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-04 03:41:32
+lastsearch = 2024-08-04 07:00:47
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -200.0%%
-title = Why I’m OBSESSED with baking my lip liner #hudabeauty ...
-url = https://www.tiktok.com/@hudabeauty/video/7267971747742371118?lang=en
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -217,9 +217,9 @@ title = Avatar Studios Logo : r/TheLastAirbender
 url = https://www.reddit.com/r/TheLastAirbender/comments/lrqa8p/avatar_studios_logo/
 
 [fkik433.com]
-match = -131.2%%
-title = tui warmdream 15 - tui15lssd ice maker - fkik433.com
-url = https://fkik433.com/shop/iipyowtm-75/
+match = -125.0%%
+title = tui warmdream 16 - Tui Magic Life Rixos Beldibi +16
+url = https://fkik433.com/blog/vljjrwrj-233/
 
 [www.pmoq458.com]
 match = -118.8%%
