--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-08-04 04:55:17
+lastsearch = 2024-08-04 08:02:12
 
 [demxanh.com]
 match = 0.0%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOooSWVUXS-0HQCYa095E3K2zHxZPUuT4XTeIHnSI5SwaLugUQrRd
 
 [shopee.vn]
 match = 0.0%%
-title = chiếu điều hòa giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hòa
+title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hoà
 
 [demviethome.vn]
 match = 14.8%%
 title = Chiếu điều hòa Latex C18 giá rẻ hà nội. ...
-url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/
+url = https://demviethome.vn/chieu-dieu-hoa-latex-c18/?srsltid=AfmBOopmSii9s0VAdZKLgDZ0hcWrvdJOJQ5dwc3-aQz9dWaKHE1oBxUI
 
 [lybalansieucute.com]
 match = 37.0%%
@@ -32,9 +32,9 @@ title = Chiếu điều hòa có mát không? Review 10 ...
 url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [suongtuyet.com]
-match = 18.5%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -29.6%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [russo.vn]
 match = -40.7%%
@@ -49,7 +49,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [foreverbedding.net]
 match = 0.0%%
 title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong?srsltid=AfmBOordE9OAxTcXE78Pofii3fissBGGZ4O0ZzX-brNph5MP5Bs6o3xE
 
 [mandep.vn]
 match = 37.0%%
