--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-04 06:51:46
+lastsearch = 2024-08-04 08:04:36
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,12 +24,12 @@ url = https://shopee.vn/Chiếu-Trúc-Gỗ-Xịn-Thái-Lan-1-5mx1-9m-1-6mx2m-1-8
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOorHzQxzskoQ0ht1BJM-IqRcRPz38rpCuCOvsxvQeYTqhVN2bCno
 
 [www.lazada.vn]
 match = -85.7%%
 title = Chiếu Trúc Thái Lan Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOorX7uD769TVI3Ls9DkqIXa16CuTV1ErvETXnFOs6BZzA-NAYq5A
 
 [chieutruc.info]
 match = -71.4%%
@@ -39,7 +39,7 @@ url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 [ipvietnam.gov.vn]
 match = -142.9%%
 title = Bảo hộ Chỉ dẫn địa lý "Cao Bằng" cho sản phẩm trúc sào và ...
-url = https://ipvietnam.gov.vn/web/guest/phat-trien-chi-dan-ia-ly/-/asset_publisher/SGA9PgvmYtWI/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-1/pop_up?_101_INSTANCE_SGA9PgvmYtWI_viewMode=print
+url = https://ipvietnam.gov.vn/en_US/web/guest/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-1/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
 
 [chieutrelanlan.com]
 match = -114.3%%
