CI images update

--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-04 06:35:25
+lastsearch = 2024-08-04 09:29:24
 
 [shopee.vn]
 match = 0.0%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Chiếu-Trúc-Tăm-HT-Loại-Bền-Đẹp-i.117037771
 [www.diepxuan.com]
 match = -14.3%%
 title = HT - Điệp Xuân
-url = https://www.diepxuan.com/ht.html?srsltid=AfmBOora4b6akffqycgWxy7fmKlzvdVO8iAeUZs2edVROYR9Mvt8TR2s
+url = https://www.diepxuan.com/ht.html
 
 [chuyenhangviet.com]
 match = -90.0%%
@@ -44,7 +44,7 @@ url = https://chieutruc.org/chieu-truc-tam-ht-120x190
 [thegioidemonline.com]
 match = -5.0%%
 title = Chiếu trúc thanh Hương Trúc 150 x 190cm
-url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-1-5-0-1-9-0-cm.html?srsltid=AfmBOoqa3sPsNqECey1gmVi2nEb3tvQTEYKE6WeCmdUjArCiCPVlPtmS
+url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-1-5-0-1-9-0-cm.html
 
 [www.facebook.com]
 match = 31.6%%
