--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-04 05:24:29
+lastsearch = 2024-08-04 09:19:38
 
 [everon.online]
 match = 19.2%%
@@ -72,9 +72,9 @@ title = Fuji Master
 url = https://fujimaster.com.vn/
 
 [store.steampowered.com]
-match = -76.9%%
-title = Tiết kiệm đến 75%% khi mua Marvel's Midnight Suns trên ...
-url = https://store.steampowered.com/app/368260/Marvels_Midnight_Suns/?l=vietnamese&curator_clanid=38262110&curator_listid=67239&snr=1_1056_1055_1056
+match = -84.6%%
+title = Tiết kiệm đến 50%% khi mua Anno 1602 History Edition trên ...
+url = https://store.steampowered.com/app/2820130/Anno_1602_History_Edition/?l=vietnamese&utm_source=indienova&curator_clanid=9170052
 
 [vi.wikipedia.org]
 match = 3.8%%
