--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-04 05:01:40
+lastsearch = 2024-08-04 09:30:27
 
 [everon.online]
 match = -7.4%%
@@ -12,9 +12,9 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -74.1%%
-title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
-url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071?srsltid=AfmBOop-lh24_mk8gBKeUO9IJlvRe1WRk8rIyLZ0XKM0VpDU3zolYiRl
+match = -66.7%%
+title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
+url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
 match = -5.3%%
@@ -24,7 +24,7 @@ url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 [demxanh.com]
 match = -7.4%%
 title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html?srsltid=AfmBOoq9p0AM3wo-AIFLX3R9jTSzfpKPwtAczOfcnZ9O5bdaGZew5_qF
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
@@ -32,14 +32,14 @@ title = Bộ Chăn ga gối Everon EPM-21067
 url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = 25.9%%
+title = Bộ chăn ga everon EPT -21045
+url = https://everonhn.com.vn/bo-chan-ga-everon-ept-21045
 
 [everon.net.vn]
-match = 15.8%%
-title = Bộ Everon Epm-21060
-url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
+match = 0.0%%
+title = Bộ Everon Ept-21045
+url = https://everon.net.vn/everon/2125/bo-everon-ept-21045
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
