--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-04 00:00:49
+lastsearch = 2024-08-04 09:31:30
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 4.3%%
-title = Bộ sản phẩm SH_BC22 060
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-060
+match = 24.2%%
+title = Bộ chăn ga gối trẻ em SH_JC22 002
+url = https://songhongonline.vn/products/bo-chan-ga-goi-tre-em-sh-yc22-002
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = 26.5%%
-title = Bộ Chăn Ga Gối Tơ Tằm Cao Cấp HJ03
-url = https://antbedding.com/bo-chan-ga-goi-to-tam-cao-cap-hj03
+match = 23.5%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH02
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh02
 
 [shopee.vn]
 match = 50.0%%
