--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-04 01:31:49
+lastsearch = 2024-08-04 09:27:22
 
 [www.diepxuan.com]
 match = 3.6%%
 title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOopR5mtOrjQk7Pr1lClPhpkU_TOvDB-qC6Nlhj3AOakmjgIjRet7
+url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOopsthwICYuKhNf67GbvyF1gQ96tv0HR697vQyqpHr5rV5KYOtlF
 
 [shop.chanrathanhthuy.com]
 match = 10.7%%
@@ -22,14 +22,14 @@ title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/chăn ga gối
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOornVmvAa6glhQ3CAmz9mGBnkDFHfR7pv4dqJDDy5-7_8W-0seau
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
-url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
+match = 17.9%%
+title = Chăn ga gối Home mã H18-056 Sale 40%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
 
 [flexhouse.vn]
 match = -17.9%%
@@ -69,7 +69,7 @@ url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-cotton-3d-hoa-tiet-ho
 [demxanh.com]
 match = -42.9%%
 title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối đệm màu trắng ...
-url = https://demxanh.com/chan-ga-goi-dem-mau-trang.html
+url = https://demxanh.com/chan-ga-goi-dem-mau-trang.html?srsltid=AfmBOoqHngUWBmuLkB-UkC4Gm7m586Is5LurxzdJw0SlC1o3gx7o5_qU
 
 [chiaki.vn]
 match = 10.7%%
