--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-04 05:56:43
+lastsearch = 2024-08-04 09:17:08
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Mai Huyền ❤️FREESHIP ...
 url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-❤️FREESHIP❤️-Chiếu-Nhựa-Hà-Nội-(1-5m-1-6m-1m8-x-2m-1m8x3m-1m8x4m)-i.126028938.4749254076
 
 [tchome.vn]
-match = 35.0%%
-title = CHIẾU NHỰA HÀ NỘI 1,8m - TC-HOME
-url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-18m-sp22546.html
+match = 20.0%%
+title = CHIẾU NHỰA HÀ NỘI 1 MÉT 2 - TC-HOME
+url = https://tchome.vn/gia-dung-doi-song-chan-chieukhoacoc-chen/chieu-nhua-ha-noi-1-met-2-sp22544.html
 
 [tandaiphong.com.vn]
 match = 46.7%%
@@ -49,12 +49,12 @@ url = https://www.facebook.com/media/set/?set=a.774846209209040.1073741830.76356
 [www.diepxuan.com]
 match = 15.0%%
 title = Chiếu nhựa Hà Nội 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-150x190.html?srsltid=AfmBOooo21YbfAHo2F_dNdzgVAj_AnAZah4Rg7Gwaw4R-BWqotJovaUZ
 
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOor6PnpYcJPQ76aJENo1Sc8cwYsp0R9oKc-qzkxZz25QH_AMFcGl
 
 [thuanloitrading.com]
 match = 10.0%%
