--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-04 06:56:58
+lastsearch = 2024-08-04 09:24:38
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -17,9 +17,9 @@ title = Chiếu trúc mắt nhỏ không viền màu đen 160x190cm (1m6)
 url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-den-160x190cm-27.html
 
 [shopee.vn]
-match = -12.9%%
-title = Chiếu trúc 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/trúc/1m2
+match = 6.5%%
+title = chiếu trúc hạt giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu trúc hạt
 
 [tiki.vn]
 match = -19.4%%
@@ -34,7 +34,7 @@ url = https://demxanh.com/chieu-truc.html
 [www.sendo.vn]
 match = -3.2%%
 title = Chiếu Trúc Hạt Quế Lâm kích thước 2m2x2m [Được kiểm ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-2m2x2m-duo-c-kie-m-ha-ng-18050806-117250489.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1722038400324_undefined_-1_cateLvl2_0_69_23_-1
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-2m2x2m-duo-c-kie-m-ha-ng-18050806-117250489.html
 
 [www.lazada.vn]
 match = 16.1%%
