--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-04 05:19:16
+lastsearch = 2024-08-04 09:18:51
 
 [www.tiktok.com]
 match = -11.8%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = Diccionario geográfico universal, 5: dedicado a la Reina ...
-url = https://books.google.com/books?id=VOzBnYZuzFYC&pg=PA807&lpg=PA807&dq=man+in+hoa+dep+16&source=bl&ots=CBuW1_yn_0&sig=ACfU3U3WVhQl-GjuPhEojmFA0QVpDYx1Bw&hl=en&sa=X&ved=2ahUKEwjt9Jet7dmHAxXbHTQIHX9BJisQ6AF6BAg_EAM
+match = -182.4%%
+title = Department of State Publication: Department and Foreign ...
+url = https://books.google.com/books?id=fqjlLd9U4NMC&pg=PA27&lpg=PA27&dq=man+in+hoa+dep+16&source=bl&ots=8kgW1wjp0A&sig=ACfU3U0F3KqThIgqAZwfHdv8v4E9dBH0CQ&hl=en&sa=X&ved=2ahUKEwjY6NvzotqHAxX_OkQIHa94NooQ6AF6BAg5EAM
 
 [tax.vermont.gov]
 match = -29.4%%
