--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-04 06:55:53
+lastsearch = 2024-08-04 09:20:43
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpJMon8&sig=ACfU3U2ywr-S649ANYE69W9EEHDSbeVo0A&hl=en&sa=X&ved=2ahUKEwia96D5gtqHAxXSkIkEHX3DDGIQ6AF6BAgZEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgpKLlm8&sig=ACfU3U2Rhu0P6LrrNM4IxcU1RLB8M8wEVA&hl=en&sa=X&ved=2ahUKEwjt7e-oo9qHAxUTGEQIHWzyC20Q6AF6BAgaEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
