--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-08-04 00:19:38
+lastsearch = 2024-08-04 09:21:06
 
 [www.bible.com]
-match = 23.1%%
-title = sawltak 20:22
-url = https://www.bible.com/bible/368/ACT.20.22.TDB
+match = -64.7%%
+title = Matyu 20 | TPIPNG Bible | YouVersion
+url = https://www.bible.com/bible/3481/MAT.20.TPIPNG
 
 [mizobibleblog.wordpress.com]
 match = -123.5%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70aifittings.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
@@ -109,7 +109,7 @@ url = https://www.bing.com/
 [espndeportes.espn.com]
 match = -82.4%%
 title = Programación de 20 de Jul. al 27 de Jul.
-url = https://espndeportes.espn.com/sports/tvlistings/deportes/scheduleWeek?date=20130720&sport=all&country=Resto_del_Caribe
+url = https://espndeportes.espn.com/sports/tvlistings/deportes/scheduleWeek?date=20130720&sport=all&country=falkland_islands_(malvinas)
 
 [www.amazon.com]
 match = -188.2%%
