--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-04 06:16:30
+lastsearch = 2024-08-04 09:20:22
 
 [www.amazon.com]
 match = -309.1%%
@@ -22,9 +22,9 @@ title = Thảm Lót Ghế Sofa | Thảm Phòng Khách Giá Rẻ
 url = https://decoviet.vn/tham-lot-ghe-sofa/
 
 [ghedamienbac.com]
-match = -300.0%%
-title = Cung Cấp Bàn Ghế Đá Granito Miền Bắc Rẻ Nhất Thị ...
-url = https://ghedamienbac.com/ban-ghe-da-granito/
+match = -227.3%%
+title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
+url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
 match = -309.1%%
@@ -102,9 +102,9 @@ title = BÀN GHẾ ĐÁ THỦ ĐỨC – GIAO HÀNG MIỄN PHÍ TẬN NƠI
 url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 
 [www.lazada.vn]
-match = -309.1%%
-title = Ghế Da Bốn Mùa Bảo Vệ Đa Năng Đệm Thảm Nội Thất Ô ...
-url = https://www.lazada.vn/products/ghe-da-bon-mua-bao-ve-da-nang-dem-tham-noi-that-o-to-phu-kien-cho-wunhkf-i2722963952.html
+match = -290.9%%
+title = Đệm Lót Ghế Da Chống Bẩn Chống Thấm Nước Dày Dặn ...
+url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html
 
 [richhome.vn]
 match = -190.9%%
