--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-04 05:51:55
+lastsearch = 2024-08-04 09:29:03
 
 [www.everonqb.com]
 match = 0.0%%
-title = Everon Quảng Bình Vỏ gối ôm EPC19055 80x100
-url = https://www.everonqb.com/vo-goi-om-epc19055-80x100.html
+title = Everon Quảng Bình Vỏ gối ôm ESB23022 80x100
+url = https://www.everonqb.com/vo-goi-om-esb23022-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -80,4 +80,9 @@ url = https://www.cellartracker.com/wine.asp?iWine=2084936
 match = -87.0%%
 title = Giá vỏ gối ôm 80x100 ở đâu rẻ nhất tháng 07/2024 - Trang 4
 url = https://sieuthidienmaypico.com/tag/vo-goi-om-80x100-ti/?trang=4
+
+[dienmayhc.com]
+match = -65.2%%
+title = Vỏ gối ôm EVERON ES1804 - Gối ôm Nhà sản xuất Everon ...
+url = https://dienmayhc.com/vo-goi-om-everon-es1804-nsh544784719.html
 
