CI images update

--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-04 09:29:24
+lastsearch = 2024-08-04 09:53:46
 
 [shopee.vn]
 match = 0.0%%
@@ -49,7 +49,7 @@ url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-1-5-0-1-9-0-cm.ht
 [www.facebook.com]
 match = 31.6%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [muasamcong.mpi.gov.vn:8082]
 match = -25.0%%
