--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-04 06:16:09
+lastsearch = 2024-08-04 10:02:39
 
 [agasound.vn]
 match = 6.7%%
@@ -82,9 +82,9 @@ title = Bộ vận động 12 chi tiết - Đồ chơi Bắc Hà
 url = https://dochoimamnon123.com/bo-van-dong-12-chi-tiet
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -140.0%%
+title = Ways Station Gaming - "T hết tiền rồi ...
+url = https://m.facebook.com/waysstation/photos/t-hết-tiền-rồi-tối-nay-đừng-đi-bar-ra-net-nhé-cho-rẻ-t-chơi-pubg-còn-m-chơi-liên/1163379434092678/
 
 [vietnamairport.vn]
 match = -93.3%%
@@ -320,4 +320,14 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 match = 0.0%%
 title = Micro chính hãng
 url = https://www.chieuduong.vn/collections/micro-chinh-hang
+
+[saca.com.vn]
+match = -366.7%%
+title = SGC
+url = https://saca.com.vn/en/sgc.html
+
+[masterisehomes.com]
+match = -180.0%%
+title = Không gian sống tinh tế, chan hòa cùng thiên nhiên
+url = https://masterisehomes.com/lumiere-boulevard/vn/project
 
