--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-04 09:30:48
+lastsearch = 2024-08-04 10:00:12
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Ruột gối kê WDR lông vũ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html?srsltid=AfmBOoqP0Ijdmbgg8y1xa3k08avU1tJLnJ6Bpp14OHEWvpcSDnxSfuLW
+match = 0.0%%
+title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
