--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-04 01:47:44
+lastsearch = 2024-08-04 10:03:21
 
 [en.wikipedia.org]
 match = -12.5%%
@@ -42,9 +42,9 @@ title = Cryptocurrency Rankings
 url = https://cryptoslate.com/coins/
 
 [30rates.com]
-match = -120.0%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -125.0%%
+title = USD to PHP forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -92,9 +92,9 @@ title = Sin Prisa Gaming vs Nongshim RedForce | VCL
 url = https://www.thespike.gg/br/match/sin-prisa-gaming-nongshim-redforce/120057
 
 [br.ign.com]
-match = -60.0%%
-title = IGN Brasil
-url = http://br.ign.com/?utm_source=tudogostoso&utm_medium=footer
+match = -120.0%%
+title = Riot Games manipula partidas para fazer você perder? ...
+url = https://br.ign.com/league-of-legends/127310/news/riot-games-manipula-partidas-para-fazer-voce-perder-cientista-analisa-178-mil-jogos-de-lol-e-tem-a-r
 
 [www.immigration.go.kr]
 match = -50.0%%
