--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-04 09:28:04
+lastsearch = 2024-08-04 09:49:00
 
 [www.cms.gov]
 match = 4.5%%
@@ -262,9 +262,9 @@ title = DIRECTORY OF SCHOOLS 2022–2023
 url = https://www.acswasc.org/wp-content/uploads/Directory/ACS-WASC_Directory.pdf
 
 [www.marines.mil]
-match = -31.8%%
-title = NAVMC 2667 LOGISTICS MINI-DICTIONARY
-url = https://www.marines.mil/portals/1/publications/navmc 2667.pdf
+match = -86.4%%
+title = US Marines in Vietnam An Expanding War 1966 PCN ...
+url = https://www.marines.mil/Portals/1/Publications/US Marines in Vietnam An Expanding War 1966  PCN 19000308600_6.pdf
 
 [www.fmcs.gov]
 match = -22.7%%
@@ -617,8 +617,8 @@ title =
 url = https://en.wikipedia.org/wiki/3rd_Battalion,_3rd_Marines
 
 [appropriations.house.gov]
-match = -109.1%%
-title = asRequestedCPFs_FY25_6.20.24 - House Appropriations
+match = -13.6%%
+title = asRequestedCPFs_FY25_6.20.24
 url = https://appropriations.house.gov/sites/evo-subsites/republicans-appropriations.house.gov/files/evo-media-document/fy25-house-cpfs-as-requested-06.28.2024.xlsx
 
 [www.bpelsg.ca.gov]
