--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-04 07:00:47
+lastsearch = 2024-08-04 09:57:29
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -6.2%%
-title = Huda Beauty Lip Stain
-url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
+match = -225.0%%
+title = @Dior Transfer Proof Lipstick (720 Forever Icone) #dior ...
+url = https://www.tiktok.com/@anneprettyness/video/7274035586653064479
 
 [www.diepxuan.com]
 match = -162.5%%
