--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-04 06:34:01
+lastsearch = 2024-08-04 09:52:45
 
 [ninhouse.vn]
-match = -146.2%%
-title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOopmdqlE4yAafqiawcBb4WG3bmGwklGMGKTmKZsaNT0wgLqwD7b9
+match = -161.5%%
+title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi?srsltid=AfmBOop7xt0DvmNlzwzTH1MAqkk1eGONG4PbDCXl7wQIZT1xcmbblFOK
 
 [www.lamido.vn]
 match = 46.2%%
@@ -84,7 +84,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/
 [shopee.vn]
 match = -153.8%%
 title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/
+url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
 
 [songhong.info]
 match = -161.5%%
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -284.6%%
-title = Gối nằm, gối ngủ, gối kẻ, gối hơi gồm cả ruột gối và vỏ áo ...
-url = https://www.lazada.vn/products/goi-nam-goi-ngu-goi-ke-goi-hoi-gom-ca-ruot-goi-va-vo-ao-goi-loai-to-danh-cho-nguoi-lon-50-x70cm-cac-mau-ke-vai-cotton-han-quoc-i1568863340.html
+match = -38.5%%
+title = Vỏ Gối Kẻ Tím Giá Tốt T04/2024
+url = https://www.lazada.vn/tag/vo-goi-ke-tim/?srsltid=AfmBOorPfS_GeCmOgNBGfOiPX5iEAfiMO7-7z5S6SXlSWtpB7PcYj2-j
 
 [flexhouse.vn]
 match = -207.7%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -215.4%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOop7Nc32BeZrOy943e0W7KFjBAVP8M1pMoKCOuRb50WpqgVmbq8w
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOopRx5d5M1os7SOSpgeGwJxK3OE7ckwNK5uQ3jLjEEL2LLcsHqeN
 
 [www.everonvn.vn]
 match = 15.4%%
@@ -174,7 +174,7 @@ url = https://demolympia.com/chan-ga-goi-khach-san-olympia-cotton-lua-7-mon-mau-
 [aeoneshop.com]
 match = -16.7%%
 title = Vỏ Gối
-url = https://aeoneshop.com/products/category/137/goi---vo-goi?srsltid=AfmBOoqyv6w2uYOqCLeVxOCXUieuqbVbpgYYYscvJw9FqNG1ZfqZMKHl
+url = https://aeoneshop.com/products/category/137/goi---vo-goi?srsltid=AfmBOoofSV_xH_z1MVa2eU_uKBJy7OUXp3nvPjAP9Ysyn_QbBmTLrL-_
 
 [tanmydesign.com]
 match = -100.0%%
