CI images update

--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-08-04 04:51:20
+lastsearch = 2024-08-04 10:19:11
 
 [shopee.vn]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOor3PdxPAV6QgmceZSLYGLsNUga-oAAAj9fytaYLmQXJPDsZgBF4
+url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOor3NeHLAZXZqVvcbUVbfJ8vB2JQULL9nnu7EIwNP1Cp4CMIEAAE
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = 8.3%%
-title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
-url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html?srsltid=AfmBOordu3QkMlX1YBbw8Wcpt-4ojRS0Uc5feGukvaw1vejDt0DdCCCP
+match = -50.0%%
+title = Chiếu điều hoà mát lạnh tặng kèm 2 bao gối 1.6 x 2. m , ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-chieu-cao-su-tran-3-lop-mem-min-i2412274423.html?srsltid=AfmBOoq8eB_0kgaJeGTyQPzvohz6I7SKhDPY2D1zIyDujRpGCE5hauky
 
 [ababy.com.vn]
 match = -4.2%%
