--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-04 06:57:40
+lastsearch = 2024-08-04 10:17:27
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -19.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [www.youtube.com]
 match = -147.6%%
@@ -242,9 +242,9 @@ title = Nhà đầu tư Thái Lan tìm hiểu cơ hội đầu tư tại Việt 
 url = https://yuanta.com.vn/tin-tuc/nha-dau-tu-thai-lan-tim-hieu-co-hoi-dau-tu-tai-viet-nam
 
 [hoanghoa.gov.vn]
-match = -128.6%%
-title = Bồi dưỡng, hướng dẫn nội dung phục vụ diễn tập khu vực ...
-url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/boi-duong-huong-dan-noi-dung-phuc-vu-dien-tap-khu-vuc-phong-thu-huyen-nam-2024.html
+match = -114.3%%
+title = Giải bóng đá phong trào Nông dân U35 vùng Đông Nam ...
+url = http://hoanghoa.gov.vn/web/trang-chu/tin-tuc-su-kien/van-hoa-thong-tin-the-thao-va-du-lich/giai-bong-da-phong-trao-nong-dan-u35-vung-dong-nam-huyen-hoang-hoa.html
 
 [baonamdinh.vn]
 match = -66.7%%
