--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-04 06:51:04
+lastsearch = 2024-08-04 10:23:55
 
 [tiki.vn]
 match = -133.3%%
@@ -12,9 +12,9 @@ title = Mua Chăn lông cừu 2 lớp loại dày cho bé nhiều mẫu
 url = https://tiki.vn/chan-long-cuu-2-lop-loai-day-cho-be-nhieu-mau-size-1m4-x-1m-sieu-am-p69905522.html?spid=160423870
 
 [joliefam.vn]
-match = -13.3%%
-title = Chăn cừu pháp Joliefam ghi tối
-url = https://joliefam.vn/chan-cuu-phap-joliefam-ghi-toi/
+match = -140.0%%
+title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
+url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
 
 [www.lazada.vn]
 match = -66.7%%
@@ -37,9 +37,9 @@ title = Nhận biết chăn lông cừu hữu cơ và chăn tổng hợp - Lasan
 url = https://lasantevn.com/nhan-biet-chan-long-cuu-huu-co-va-chan-tong-hop/
 
 [shopee.vn]
-match = -173.3%%
-title = Chăn lông cừu - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chăn/lông cừu
+match = -193.3%%
+title = Chăn lông cừu 2 lớp loại dày siêu ấm cho bé (kt 100x140cm)
+url = https://shopee.vn/Chăn-lông-cừu-2-lớp-loại-dày-siêu-ấm-cho-bé-(kt-100x140cm)-i.37776623.7893775484
 
 [changadep88.vn]
 match = -86.7%%
