--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-04 02:30:59
+lastsearch = 2024-08-04 10:18:10
 
 [demxanh.com]
-match = 3.8%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = -15.4%%
+title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
+url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -19,12 +19,12 @@ url = https://thegioidemviet.vn/chieu-dieu-hoa-lua/
 [tiki.vn]
 match = -7.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
 
 [foreverbedding.net]
-match = -26.9%%
-title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
-url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
+match = 38.5%%
+title = Chiếu điều hòa - Forever Bedding
+url = https://foreverbedding.net/chieu-dieu-hoa
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -42,9 +42,9 @@ title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
 url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.lazada.vn]
-match = -46.2%%
-title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
+match = 42.3%%
+title = Chiếu Lụa điều Hòa Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/
 
 [nanara.vn]
 match = 7.7%%
@@ -60,4 +60,9 @@ url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
 match = -65.4%%
 title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
 url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
+
+[nasago.vn]
+match = -50.0%%
+title = Chiếu Điều Hòa Tencel Latex 3D Chính Hãng Giá Tốt Tại ...
+url = https://nasago.vn/chieu-dieu-hoa-tencel-latex/
 
