--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-08-04 06:17:52
+lastsearch = 2024-08-04 10:14:47
 
 [www.lazada.vn]
 match = -212.5%%
@@ -23,8 +23,8 @@ url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
 match = -143.8%%
-title = #foryou #tiktoksalon #beautytok #hudabeauty ...
-url = https://www.tiktok.com/@hudabeauty/video/7278744176408235307
+title = Gloss for life #beautytok #hudabeauty #lip ...
+url = https://www.tiktok.com/@hudabeauty/video/7343640145192684842
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
