--- a/images/chieu-dieu-hoa-khong-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-15.html
 lastopen = 2024-06-09 23:41:33
 
 [search]
-lastsearch = 2024-08-04 10:00:33
+lastsearch = 2024-08-04 10:42:44
 
 [demxanh.com]
 match = 0.0%%
@@ -22,9 +22,9 @@ title = Chiếu Điều Hoà Sợi Mây Tơ Tằm Mát Lạnh Không Gối ...
 url = https://shopee.vn/Chiếu-Điều-Hoà-Sợi-Mây-Tơ-Tằm-Mát-Lạnh-Không-Gối-Cao-Cấp-Chiếu-Có-Chun-Cài-Góc-Hàng-Loại-1-i.529742790.25073007553
 
 [foreverbedding.net]
-match = -59.3%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 0.0%%
+title = Nằm Chiếu Điều Hòa Có Mát Không? - Forever Bedding
+url = https://foreverbedding.net/nam-chieu-dieu-hoa-co-mat-khong
 
 [congtynemthangloi.com]
 match = -29.6%%
