--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-04 09:23:14
+lastsearch = 2024-08-04 10:38:20
 
 [burningman.org]
 match = 0.0%%
@@ -880,4 +880,9 @@ url = https://www.saclibrary.org/
 match = 0.0%%
 title = 
 url = https://deserthopetreatment.com/blog/news/burning-man-good-bad/
+
+[www.whec.com]
+match = -6.7%%
+title = WHEC.com: News10NBC
+url = https://www.whec.com/
 
