--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-04 06:43:42
+lastsearch = 2024-08-04 10:33:50
 
 [shopee.vn]
 match = -171.4%%
@@ -102,14 +102,14 @@ title = Màn chụp tự bung Kiều Phi - Mùng, màn ngủ
 url = https://sieuthidienmaypico.com/ma-n-chu-p-tu-bung-kie-u-phi-mu-nsh8587689038.html
 
 [www.facebook.com]
-match = -157.1%%
-title = Màn Mùng chụp tự bung Kiều Phi - Bảo Hành 18 tháng
-url = https://www.facebook.com/groups/manchuptubung/
+match = -100.0%%
+title = Holy Bible (Mizo) | Johana 3:15-18
+url = https://www.facebook.com/groups/MizoHolyBible/posts/johana-315-18tupawh-a-ring-apiangin-amah-avanga-chatuana-nunna-an-neihna-turin-p/4674411329291742/
 
 [www.churchofjesuschrist.org]
-match = -28.6%%
-title = Doktrin na ol Kavanen 78
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
+match = -35.7%%
+title = Doktrin na ol Kavanen 89
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/89?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
