--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-04 06:27:11
+lastsearch = 2024-08-04 10:43:47
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -14,7 +14,7 @@ url = https://www.thanhthuyhanh.com/products/ruot-goi-nam-dream-zone
 [ninhouse.vn]
 match = -171.4%%
 title = Ruột gối nằm giá rẻ NIN House chính hãng tại Tphcm
-url = https://ninhouse.vn/collections/ruot-goi-1
+url = https://ninhouse.vn/collections/ruot-goi-1?srsltid=AfmBOooI_dzLIwKlF0ylGBo_avXq6zmgxW8QrGXe9v_QYOjpF_WXF9Hm
 
 [elambo.vn]
 match = -142.9%%
@@ -34,7 +34,7 @@ url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 [demxanh.com]
 match = -150.0%%
 title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+url = https://demxanh.com/ruot-goi.html?srsltid=AfmBOorRYJMYaV40zypOWQ8RMmho9YRlo96GlBZ_wJv6VbjfCSns_rtD
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -59,12 +59,12 @@ url = https://songhonghanoi.vn/bang-gia-vo-goi-ruot-goi-song-hong-moi-nhat-2021.
 [jysk.vn]
 match = -164.3%%
 title = Ruột Chăn, Ruột Gối Ngủ Cao Cấp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/ruot-chan-goi
+url = https://jysk.vn/ruot-chan-goi?srsltid=AfmBOoocO54hPB00dtFQeg-i4w7t6yvkKHuB7y6wtwfpP4wPh8P0Xetn
 
 [everonvn.com.vn]
 match = -164.3%%
 title = Bảng Giá Ruột Gối Đầu Everon Chính Hãng Hàn Quốc
-url = https://everonvn.com.vn/5/ruot-goi-everon
+url = https://everonvn.com.vn/5/ruot-goi-everon?srsltid=AfmBOooVJV2yp4elf11GjbES_2sXOYe-DQ5T_ZUSDQWx5pC3dd3W6bS5
 
 [demsonghonghanoi.com]
 match = -235.7%%
@@ -89,7 +89,7 @@ url = https://tiki.vn/ruot-goi/c23366
 [ru9.vn]
 match = -171.4%%
 title = Kinh Nghiệm Nên Mua Ruột Gối Loại Nào Để Ngủ Ngon
-url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao
+url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao?srsltid=AfmBOoo4RzfersOMW8fmnWe4ElNQupocHxUjeA2y6RwCL3PKe0PjWkCb
 
 [www.nguonhangsigiare.com.vn]
 match = -235.7%%
