--- a/images/chieu-cay-ht-15/config.ini
+++ b/images/chieu-cay-ht-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-15.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-04 09:51:02
+lastsearch = 2024-08-04 10:51:17
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -52,9 +52,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.youtube.com]
-match = -213.3%%
-title = Nhiễm Trùng ‘Cậu Nhỏ' Sau Khi Đi Xỏ Khuyên Để Tăng Hấp ...
-url = https://www.youtube.com/watch?v=pwAZLchVoZ8
+match = -166.7%%
+title = 🔴 Tin Bão Mới Sáng Ngày 04/08_XH Bão Số 3 Rất ...
+url = https://www.youtube.com/watch?v=qmz5QCQEMJs
 
 [htlight.vn]
 match = -26.7%%
