--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -32,9 +32,9 @@ title = Sau 4 ngày công chiếu tại Đài Loan, Thanh Xuân 18x2: Lữ ...
 url = https://m.facebook.com/cgvcinemavietnam/photos/sau-4-ngày-công-chiếu-tại-đài-loan-thanh-xuân-18x2-lữ-trình-hướng-về-em-đứng-top/844924327674339/
 
 [thangnhomdongtam.com]
-match = -109.5%%
-title = Thang nhôm gấp 4 khúc TMH3D LD Đài Loan - Cao cấp - Giá tốt
-url = https://thangnhomdongtam.com/san-pham/thang-nhom-gap-4-khuc-chu-m-hang-lien-doanh-dai-loan-tmh3d
+match = -81.0%%
+title = Thang nhôm gấp 4 khúc THM4 LD Đài Loan - Hàng Cao cấp
+url = https://thangnhomdongtam.com/san-pham/thang-nhom-chu-m-cao-cap-hang-lien-doanh-dai-loan-thm4-can-nang-16-kg
 
 [thangnhomnhapkhau.com]
 match = -47.6%%
@@ -87,9 +87,9 @@ title = Top 10 Rạp chiếu phim ở Đài Loan - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attractions-g293910-Activities-c56-t97-Taiwan.html
 
 [www.facebook.com]
-match = -181.0%%
-title = 20240416 Bản tin tiếng Việt PTS Đài Loan 公視越南語新聞 ...
-url = https://www.facebook.com/ptsvietnamesenews/videos/20240416-bản-tin-tiếng-việt-pts-đài-loan-公視越南語新聞/452366227450173/
+match = -100.0%%
+title = Trấn Thành - Lịch chiếu MAI ở Đài Loan nha!!! Cả nhà cập...
+url = https://www.facebook.com/tran.thanh.ne/posts/lịch-chiếu-mai-ở-đài-loan-nha-cả-nhà-cập-nhật-để-đi-xem-cho-dễ-ạh-ra-rạp-thôi-đà/1026713498818919/
 
 [cau-ca.com]
 match = -42.9%%
