--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-04 02:46:20
+lastsearch = 2024-08-04 10:45:03
 
 [demre.com.vn]
 match = 61.1%%
@@ -37,9 +37,9 @@ title = Chiếu nhựa Hà Nội 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 
 [demxanh.com]
-match = 16.0%%
-title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
-url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html
+match = -28.0%%
+title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
