--- a/images/man-tu-bung-dinh-vuong-14/config.ini
+++ b/images/man-tu-bung-dinh-vuong-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-14.html
 lastopen = 2024-06-07 00:50:47
 
 [search]
-lastsearch = 2024-08-04 09:31:09
+lastsearch = 2024-08-04 10:53:24
 
 [shopee.vn]
 match = -12.0%%
@@ -12,9 +12,9 @@ title = Màn chụp tự bung đỉnh vuông Kiều Phi - Mẫu mùng ...
 url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-Kiều-Phi-Mẫu-mùng-chụp-tự-bung-người-lớn-chống-muỗi-gấp-gọn-tiện-dụng-i.286850546.3461062779
 
 [munghoangphat.com]
-match = 48.0%%
-title = màn chụp đỉnh vuông tự bung
-url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
+match = 12.0%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [www.mungbaobao.com]
 match = -28.0%%
@@ -22,9 +22,9 @@ title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 202
 url = https://www.mungbaobao.com/
 
 [tiki.vn]
-match = -28.0%%
-title = Màn chụp tự bung đỉnh vuông hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=màn chụp tự bung đỉnh vuông
+match = -8.0%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [www.mantubung.com]
 match = -12.0%%
