--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-08-04 09:53:06
+lastsearch = 2024-08-04 10:58:35
 
 [hanvico.net.vn]
 match = -10.5%%
@@ -54,7 +54,7 @@ url = https://aoiconcept.com/products/ruot-goi-nam-cao-cap-a-oi-concept-50x70cm-
 [jysk.vn]
 match = -94.7%%
 title = Ruột gối | lông vũ | GALDEBERGET | trắng | 50x70/75cm
-url = https://jysk.vn/ruot-goi-long-vu-galdeberget-trang-50x7075cm-750gr
+url = https://jysk.vn/ruot-goi-long-vu-galdeberget-trang-50x7075cm-750gr?srsltid=AfmBOopHjnqByTJuwOIladHrKB0Hdbb0oWr7QcLSDtuVZw0THnSZaCn9
 
 [shopee.vn]
 match = -110.5%%
