--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-04 10:13:22
+lastsearch = 2024-08-04 10:56:29
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOopfBx1ppgOGeLyOeWPNW9Kp8T4OYb0PJ1ZYvJiWw7v67TD2LQTE
 
 [demre.com.vn]
 match = 18.2%%
@@ -29,7 +29,7 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoo-MNLzeVjja3QYXk1HUF9SWKrncN7o2rY_OBtkDdx2L0VkV6mC
 
 [cafeland.vn]
 match = -45.5%%
@@ -79,7 +79,7 @@ url = https://suongtuyet.com/nem-lo-xo-kim-cuong-divan-asling
 [vikicare.com]
 match = 13.6%%
 title = thảm đá nhiệt nóng - Vikicare
-url = https://vikicare.com/product-tag/tham-da-nhiet-nong/
+url = https://vikicare.com/product-tag/tham-da-nhiet-nong/?srsltid=AfmBOop0xsEWN0MFzsCJ4H07gb5bR1jtmMHcY4pInYHsqo6C8yEw-y9B
 
 [www.linkedin.com]
 match = -86.4%%
