--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-04 06:44:37
+lastsearch = 2024-08-04 11:16:39
 
 [everon.online]
 match = 12.0%%
@@ -12,14 +12,14 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -24.0%%
-title = Bộ chăn bốn mùa Chân Trời Xanh - ESM24014 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-chan-troi-xanh-esm24014
+match = -32.0%%
+title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOoouqaDYPSzqzcCC6-CMVjrRPDrkk5hfH_pda1zMsZ7bD9L3hnTl
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOookWrVyvZbFkr62T93etpF92EP0st4eSv-e2MFRqBKKZj9Na-oS
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [format.com.vn]
 match = -100.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -4.0%%
-title = Chính chủ gửi bán căn hộ chung cư ...
-url = https://m.facebook.com/groups/245093786896941/posts/1272667604139549/
+match = -16.0%%
+title = CHỢ CƯ DÂN VINHOMES OCEAN PARK @ | ✅ ...
+url = https://m.facebook.com/groups/357588832255775/posts/1215578123123504/
 
 [dantri.com.vn]
 match = -60.0%%
