--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-08-04 09:56:08
+lastsearch = 2024-08-04 11:20:08
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối TTN 14 (120*190 cm) - Koala
 url = https://koala.vn/bo-chan-ga-goi-ttn-14.html
 
 [changagoidemsonghong.com]
-match = -71.4%%
-title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
-url = https://changagoidemsonghong.com/chan-ga-goi-bc57
+match = -28.6%%
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
+url = https://changagoidemsonghong.com/chan-ga-goi-bc66
 
 [songhong.info]
 match = -19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon Lite EVE14
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-lite-eve14
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga chun chần mặt Elegant H140 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-elegant-h140
+match = -33.3%%
+title = Bộ ga chun Velina V14 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v14
 
 [changmibedding.com]
 match = -33.3%%
