--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-04 09:58:51
+lastsearch = 2024-08-04 11:25:23
 
 [eva.vn]
 match = -163.2%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Xuất Nhật Mộc Hương Cao Cấp, Chiếu Điều ...
 url = https://shopee.vn/Chiếu-Trúc-Xuất-Nhật-Mộc-Hương-Cao-Cấp-Chiếu-Điều-Hòa-Mùa-Hè-i.252624902.17494018040
 
 [mocnhienfarm.com]
-match = -7.7%%
-title = Cây pháo bông
-url = https://mocnhienfarm.com/products/cay-phao-bong
+match = -100.0%%
+title = Linh sam siêu bông Sông Hinh, tím hồng, lá nhỏ M1
+url = https://mocnhienfarm.com/products/linh-sam-sieu-bong
 
 [tapchivietnamhuongsac.vn]
 match = -73.7%%
