--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-08-04 03:40:50
+lastsearch = 2024-08-04 11:28:37
 
 [shopee.vn]
-match = 4.3%%
-title = Chiếu Nhựa Gấp Gọn Đủ Kích Cỡ Cao Cấp
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Hàng-Việt-Nam-Chiếu-Nhựa-Gấp-Gọn-Đủ-Kích-Cỡ-Cao-Cấp-i.398388048.13666402755
+match = -65.2%%
+title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
+url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
 
 [www.facebook.com]
 match = 52.2%%
@@ -17,9 +17,9 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = 34.8%%
-title = Chiếu nhựa thái bình 1m x 1m9 - chieu
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
+match = -69.6%%
+title = Chiếu Cói Thái Bình Siêu Tốt, Giá Gốc, Thanh Toán Khi ...
+url = https://www.sendo.vn/chieu-coi-thai-binh.htm
 
 [trangvangvietnam.com]
 match = -87.0%%
@@ -74,7 +74,7 @@ url = https://h5.lazada.vn/products/freeship-max-ma-giam-gia-chieu-nhua-thai-bin
 [m.facebook.com]
 match = 85.0%%
 title = Chiếu nhựa Thái Bình
-url = https://m.facebook.com/p/Chiếu-nhựa-Thái-Bình-100083672378137/
+url = https://m.facebook.com/100083672378137
 
 [chieu.com.vn]
 match = -117.4%%
