--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-03 19:24:27
+lastsearch = 2024-08-04 11:31:27
 
 [www.bible.com]
 match = -157.1%%
@@ -22,18 +22,18 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -135.7%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [manthutrang.com]
-match = -228.6%%
-title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
-url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
+match = -207.1%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [easydream.vn]
-match = -178.6%%
-title = Mùng Chụp Tự Bung -Màn chụp tự bung [16] - easy dream
+match = -185.7%%
+title = TOP 5 MÙNG CHỤP TỰ BUNG - MÀN CHỤP CAO CẤP EASY ...
 url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
 
 [www.mantubung.com]
