--- a/images/nem-lo-xo-techwood-18/config.ini
+++ b/images/nem-lo-xo-techwood-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-18.html
 lastopen = 2024-06-10 00:49:07
 
 [search]
-lastsearch = 2024-08-04 03:16:06
+lastsearch = 2024-08-04 11:27:33
 
 [demtot.com]
 match = 26.7%%
@@ -22,9 +22,9 @@ title = [Freeship + Quà tặng] - Đệm lò xo Techwood Tuấn Anh rẻ ...
 url = https://shopee.vn/-Freeship-Quà-tặng-Đệm-lò-xo-Techwood-Tuấn-Anh-rẻ-nhất-thị-trường-i.74770078.6992817339
 
 [demxanh.com]
-match = -109.5%%
-title = Top 10 loại nệm lò xo liên kết chất lượng và bán chạy nhất!
-url = https://demxanh.com/top-10-loai-nem-lo-xo-lien-ket-chat-luong-va-ban-chay-nhat.html
+match = -76.2%%
+title = Đệm lò xo 1m5 (1m5x1m9 và 1m5x2m) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m5x1m9-150x190cm-gia-bao-nhieu.html
 
 [maybedding.vn]
 match = 38.9%%
@@ -57,9 +57,9 @@ title = Đệm lò xo Hàn Việt Hải giá rẻ
 url = https://demsingapore.com/dem-lo-xo-han-viet-hai.html
 
 [lombom.com]
-match = -119.0%%
-title = Nơi cung cấp nệm đệm lò xo cao cấp chính hãng tại Việt Nam!
-url = https://lombom.com/dem-lo-xo/
+match = -133.3%%
+title = Tổng kho nệm - đệm chính hãng khuyến mại 20-60%% Freeship!
+url = https://lombom.com/dem-nem/page/2/
 
 [www.linkedin.com]
 match = 4.8%%
