--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-08-04 04:57:18
+lastsearch = 2024-08-04 11:21:09
 
 [demxanh.com]
-match = -131.6%%
-title = Tấm trang trí khách sạn giá rẻ nhất tại hệ thống Demxanh. ...
-url = https://demxanh.com/tam-trang-tri-khach-san.html
+match = -26.3%%
+title = Cung cấp mẫu tấm trang trí khách sạn TT04
+url = https://demxanh.com/tam-trang-tri-khach-san-tt04.html
 
 [thegioidemviet.vn]
 match = -73.7%%
