--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-04 10:33:07
+lastsearch = 2024-08-04 11:24:40
 
 [shopee.vn]
 match = -76.2%%
@@ -69,7 +69,7 @@ url = https://congtynemthangloi.com/kich-thuoc-giuong-ngu-chuan-pho-bien-hien-na
 [ninhouse.vn]
 match = -76.2%%
 title = Cách tính kích thước ga giường để phù hợp với nệm
-url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem?srsltid=AfmBOooQfvgLhIWoGH9bamb35_eLOxb8HHAc3qDOCP0ndjGYpzPPIJQR
+url = https://ninhouse.vn/blogs/news/cach-tinh-kich-thuoc-ga-giuong-de-phu-hop-voi-nem
 
 [giuongxep.com]
 match = -57.1%%
@@ -114,7 +114,7 @@ url = https://thangnhomsaigon.com/giuong-xep/
 [noithatduongdong.com]
 match = 23.8%%
 title = Giường sắt 2 tầng -GT16
-url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16?srsltid=AfmBOoofKpUYrx5oLCCyQj5RtB15OQw4YzZ2R6EpPwJapv10lHHVTyTW
+url = https://noithatduongdong.com/giuong-sat-2-tang-co-rem-gt16
 
 [beyours.vn]
 match = 0.0%%
