--- a/images/tham-nhung-bali-2m-3m/config.ini
+++ b/images/tham-nhung-bali-2m-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-2m-3m.html
 lastopen = 2024-06-09 22:34:54
 
 [search]
-lastsearch = 2024-08-04 06:54:50
+lastsearch = 2024-08-04 11:31:06
 
 [noithathomy.com]
 match = -42.9%%
@@ -17,9 +17,9 @@ title = Tặng Thảm Lau Chân - 100 Mẫu Thảm 2m x 3m Thảm Nỉ ...
 url = https://shopee.vn/Tặng-Thảm-Lau-Chân-100-Mẫu-Thảm-2m-x-3m-Thảm-Nỉ-Bali-Trải-Sàn-Trải-Phòng-Khách-Phòng-Ngủ-Sang-Trọng-i.22156385.4432151796
 
 [www.lazada.vn]
-match = -104.8%%
-title = ( TẶNG THẢM CHÂN ) Thảm nỉ trải sàn phòng khách [ 2m x ...
-url = https://www.lazada.vn/products/tang-tham-chan-tham-ni-trai-san-phong-khach-2m-x-3m-va-2m3-x-16m-tham-bali-sang-trong-hon-tham-long-tham-trai-san-balitham-trang-tri-phong-nguphong-khach-da-dang-mau-mahang-san-tham-ni-i408728790.html
+match = -100.0%%
+title = Thảm Trải Sàn nỉ 2m x 3m và 1M6X2M3, thảm bali trải ...
+url = https://www.lazada.vn/products/tham-trai-san-ni-2m-x-3m-va-1m6x2m3-tham-bali-trai-san-day-hon-tham-long-sang-trong-tham-chong-tron-truot-in-tham-lot-san-cho-phong-khach-ban-phong-trang-tri-phong-ngu-160x230-tts01-i409208115.html
 
 [tiki.vn]
 match = -9.5%%
