--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-04 08:05:18
+lastsearch = 2024-08-04 11:38:24
 
 [dreamland.vn]
 match = 7.5%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 [demluxury.com.vn]
 match = 31.6%%
 title = Bộ chăn ga gối Cotton MOC 03 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/?srsltid=AfmBOoqhjpy4V2QENuQVqVuzcptPmcTOmv6P62-Ut--ee76FcT5idK7A
 
 [www.facebook.com]
 match = -8.0%%
@@ -29,7 +29,7 @@ url = https://www.facebook.com/Dreamland.com.vn/
 [thegioidemonline.com]
 match = 62.8%%
 title = Bộ chăn ga gối Dreamland cotton lụa NK PT34
-url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-dreamland-cotton-lua-n-k-p-t-3-4.html?srsltid=AfmBOoobezsyzvPaqf3dWmbk0F821_I8sdp7zJs4VsqDX9lykzvD2pRH
 
 [demdreamland.vn]
 match = 31.0%%
