--- a/images/bo-ga-chun-chan-lua-warmdream-140x190-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-140x190-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-140x190-hq.html
 lastopen = 2024-06-10 00:37:03
 
 [search]
-lastsearch = 2024-08-03 23:34:39
+lastsearch = 2024-08-04 11:38:45
 
 [www.diepxuan.com]
 match = 37.5%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOopJUAXFVoL8N60lNXLi911fEFTIApfxob6f69eWIg5rLQXo67ki
 
 [www.instagram.com]
 match = -15.0%%
