--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-04 05:17:55
+lastsearch = 2024-08-04 11:40:07
 
 [helloviettravel.com]
 match = -181.2%%
@@ -32,8 +32,8 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -156.2%%
-title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
+match = -181.2%%
+title = Địa điểm du lịch Nghệ An - 18 tọa độ VUI CHƠI hấp dẫn nhất
 url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = -193.8%%
+title = Khám phá 18 Tầng địa ngục tại Làng du lịch Mỹ Khánh Cần Thơ
+url = https://www.youtube.com/watch?v=ql7G7p6JNJE
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
