--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-04 10:32:06
+lastsearch = 2024-08-04 11:41:29
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -73,8 +73,8 @@ url = https://www.youtube.com/watch?v=6vFiUCFz494
 
 [books.google.com]
 match = -218.8%%
-title = Cuộc Chiến Trường Kỳ Của Đặng Tiểu Bình: Xung Đột Quân Sự ...
-url = https://books.google.com/books?id=zTboEAAAQBAJ&pg=PT142&lpg=PT142&dq=chieu+lac+soc+16&source=bl&ots=cTsczLIsSR&sig=ACfU3U3GsPvbLoeWhw7pSL2ImNT6TUO7Sw&hl=en&sa=X&ved=2ahUKEwiI9b-js9qHAxX8g4kEHQ5uLDQQ6AF6BAgaEAM
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacFQ8jAg&sig=ACfU3U3AnB0A0SfkE9aphP1ekVBv67cGgw&hl=en&sa=X&ved=2ahUKEwiOz7DkwtqHAxXIDDQIHRaUBIQQ6AF6BAgeEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
