--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-04 05:00:57
+lastsearch = 2024-08-04 11:43:13
 
 [chieutrucsaigon.com]
 match = 0.0%%
-title = CHIẾU TRÚC HẠT VÀNG HƯƠNG TRÚC 1.4M X 2M
-url = https://chieutrucsaigon.com/chieu-truc-hat-vang-huong-truc-1m4x2m.html
+title = CHIẾU TRÚC SẢN PHẨM ĐỘC ĐÁO ĐA DẠNG
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-dao-da-dang-40.html
 
 [chieutrelanlan.com]
 match = -76.2%%
@@ -29,7 +29,7 @@ url = https://trangvangvietnam.com/categories/490435/chieu-nam-(chieu-tre-chieu-
 [demxanh.com]
 match = -76.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooaBmP9ZNkafA7ibL2fgTxDr4EHoFA7GKGek4arwGEqnJ23w6Rp
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooKjW22rlS8GveK2elWDQ724vVPDU34_OMgC-SSe6MhAMekSn7S
 
 [vongxepsaigon.vn]
 match = -76.2%%
