--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-04 09:49:00
+lastsearch = 2024-08-04 11:36:19
 
 [www.cms.gov]
 match = 4.5%%
@@ -152,9 +152,9 @@ title = The Whirlwind War
 url = https://history.army.mil/html/books/070/70-30-1/cmhpub_70-30-1.pdf
 
 [www.govinfo.gov]
-match = -633.3%%
-title = PDF
-url = https://www.govinfo.gov/content/pkg/CDIR-2011-12-01/pdf/CDIR-2011-12-01.pdf
+match = -118.2%%
+title = NIST Center for Neutron Research: 2014 accomplishments ...
+url = https://www.govinfo.gov/content/pkg/GOVPUB-C13-363416a59f07595ec81ad4145fdf56e2/pdf/GOVPUB-C13-363416a59f07595ec81ad4145fdf56e2.pdf
 
 [ufdcimages.uflib.ufl.edu]
 match = -26.7%%
@@ -532,9 +532,9 @@ title =
 url = https://www.dpreview.com/news/9499959515/om-digital-solutions-announces-tough-tg-7-rugged-camera
 
 [nepis.epa.gov]
-match = -104.5%%
-title = Environmental Impact Statement Middle East Fork Area ...
-url = https://nepis.epa.gov/Exe/ZyPURL.cgi?Dockey=20016V8S.TXT
+match = -136.4%%
+title = Characterization of Sulfates, Odor, Smoke, POM ... - epa nepis
+url = https://nepis.epa.gov/Exe/ZyPURL.cgi?Dockey=P100S7RK.TXT
 
 [www.justice.gov]
 match = -81.8%%
@@ -705,4 +705,39 @@ url = https://researchprofiles.canberra.edu.au/files/92523332/Alajmi_Mohammed.pd
 match = -109.1%%
 title = Franklin County, Ohio Road Map and Street Locator, 2020 ...
 url = https://www.franklincountyengineer.org/wp-content/uploads/2016/04/FCEO_2020_HM_with_Index.pdf
+
+[documents1.worldbank.org]
+match = -37.5%%
+title = E14000vol-03.txt
+url = https://documents1.worldbank.org/curated/en/716741468126574656/text/E14000vol-03.txt
+
+[lalafco.org]
+match = -118.2%%
+title = east san gabriel final municipal service review appendix b
+url = http://lalafco.org/wp-content/uploads/documents/msr/ESG Appendix B.pdf
+
+[apps.dtic.mil]
+match = -36.4%%
+title = EXPLOSIVE ACCIDENT/INCIDENT - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/AD0660020.pdf
+
+[lfpubweb.cityofdenton.com]
+match = -9.1%%
+title = 1987 - COD - City of Denton
+url = https://lfpubweb.cityofdenton.com/PublicWeblink/DocView.aspx?id=440998&dbid=0&repo=CitySecretary
+
+[archive.newportbeachlibrary.org]
+match = -22.7%%
+title = 1974-09-27 - Orange Coast Pilot
+url = https://archive.newportbeachlibrary.org/NBPL/DocView.aspx?id=1231329&dbid=0&repo=CNB
+
+[monterey.org]
+match = -18.8%%
+title = City of Monterey
+url = https://monterey.org/Document Center/City Hall/City clerk/Charters/1913-Charter.pdf
+
+[www.akronlibrary.org]
+match = -26.7%%
+title = AKRON 1883-1884
+url = https://www.akronlibrary.org/images/SpecCol/akroncitydir1883-1884.pdf
 
