CI images update

--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-04 09:20:22
+lastsearch = 2024-08-04 11:54:49
 
 [www.amazon.com]
-match = -309.1%%
-title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
-url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
+match = -100.0%%
+title = Ghe da yeu thuong - Hugo Luân
+url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
 
 [chungauto.vn]
-match = -209.1%%
-title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
-url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
+match = -336.4%%
+title = Bọc ghế da Nappa cho ô tô | Giá ưu đãi 2024, trả góp 0%%
+url = https://chungauto.vn/boc-ghe-da-nappa-p993.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
+match = -318.2%%
+title = SG718 Ghế xoay da trưởng phòng được ưa chuộng nhất ...
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg718
 
 [dandoxe.com]
 match = -154.5%%
@@ -182,9 +182,9 @@ title = ÁO GHẾ DA NAPA XE BT50 2021-2024
 url = https://kyguidopickup.com/san-pham/ao-ghe-da-napa-xe-bt50/
 
 [thamtraisangiadinh.com]
-match = -245.5%%
-title = Thảm Trải Ghế Gỗ | Thảm Ghế Len Cắt Theo Yêu Cầu
-url = https://thamtraisangiadinh.com/tham-trai-ghe-go
+match = -209.1%%
+title = Thảm Trải Ghế Góc Cắt Theo Kích Thước LV4051
+url = https://thamtraisangiadinh.com/tham-trai-ghe-goc-cat-theo-kich-thuoc-lv4051
 
 [ghedaviet.com]
 match = -227.3%%
