--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-08-04 10:31:07
+lastsearch = 2024-08-04 11:55:29
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -37,9 +37,9 @@ title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ga trải giường thắng lợi
 
 [nemhana.com]
-match = 0.0%%
-title = Nệm foam Thắng Lợi cao cấp - Nệm Hana
-url = https://nemhana.com/nem-foam-thang-loi-cao-cap/
+match = -40.0%%
+title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
+url = https://nemhana.com/ga-chun/
 
 [demxanh.com]
 match = 0.0%%
