--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-04 10:39:57
+lastsearch = 2024-08-04 11:46:08
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -100.0%%
-title = NEM Fashion - 𝑴𝒊𝒙 đ𝒐̂̀ 𝒗𝒐̛́𝒊 𝒂́𝒐 𝒍𝒆𝒏 𝒕𝒓𝒐𝒏𝒈 𝒏𝒈𝒂̀𝒚 ...
-url = https://www.facebook.com/nemfashion.official/posts/𝑴𝒊𝒙-đ𝒐̂̀-𝒗𝒐̛́𝒊-𝒂́𝒐-𝒍𝒆𝒏-𝒕𝒓𝒐𝒏𝒈-𝒏𝒈𝒂̀𝒚-𝒈𝒊𝒐́-𝒎𝒖̀𝒂-𝒗𝒆̂̀-thời-tiết-chuyển-gió-mùa-cũng-/1896608763810349/
+match = -77.8%%
+title = NEM Fashion - NEM Fashion added a new photo.
+url = https://www.facebook.com/photo.php?fbid=790551389774227&id=100064581196454&set=a.651941746968526
 
 [thegioinem.com]
 match = -55.6%%
