--- a/images/ruot-nem-korea-160x200x09/config.ini
+++ b/images/ruot-nem-korea-160x200x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-160x200x09.html
 lastopen = 2024-06-10 12:38:50
 
 [search]
-lastsearch = 2024-08-04 01:49:13
+lastsearch = 2024-08-04 11:58:17
 
 [www.diepxuan.com]
 match = 28.0%%
@@ -39,7 +39,7 @@ url = https://www.britannica.com/place/Seoul
 [en.wikipedia.org]
 match = 0.0%%
 title = 
-url = https://en.wikipedia.org/wiki/Names_of_Korea
+url = https://en.wikipedia.org/wiki/Guryong_Village
 
 [rusticpathways.com]
 match = 0.0%%
