--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-04 06:29:51
+lastsearch = 2024-08-04 11:49:42
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -72,9 +72,9 @@ title = GIƯỜNG NGỦ BỌC DA CAO CẤP HIỆN ĐẠI - LB15
 url = https://nemphuoclong.vn/giuong-ngu-boc-da-cao-cap-hien-dai-lb15
 
 [noithatcaco.vn]
-match = -115.0%%
-title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
-url = https://noithatcaco.vn/collections/giuong-ngu?srsltid=AfmBOor5VMVlkxPEyCLiZlA3GX3kN7xMT-aTFLbzI6MeXz3yI1h_fBxa
+match = -135.0%%
+title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
+url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
 
 [www.quiphuc.com]
 match = 25.0%%
