--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-04 05:32:43
+lastsearch = 2024-08-04 11:55:10
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -17,9 +17,9 @@ title = The 5th edition of the World Health Organization ...
 url = https://pubmed.ncbi.nlm.nih.gov/35732829/
 
 [www.dir.ca.gov]
-match = -126.3%%
-title = Workers' Compensation Appeals Board - Panel decisions
-url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
+match = -21.1%%
+title = ADDITIONAL CASE INFORMATION
+url = https://www.dir.ca.gov/dwc/sb1160-ab1244/Consolidation-Notice-First-Hearing/Garcia-Additional-Cases-Info.pdf
 
 [profiles.ucsf.edu]
 match = -7.7%%
@@ -38,7 +38,7 @@ url = https://www.lebow.drexel.edu/people/shawkathammoudeh
 
 [profiles.ucsd.edu]
 match = -10.5%%
-title = Gary Vilke - UCSD Profiles
+title = Gary Vilke | UCSD Profiles
 url = https://profiles.ucsd.edu/gary.vilke
 
 [medboard.nv.gov]
