--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-04 11:47:54
+lastsearch = 2024-08-04 12:32:26
 
 [www.lazada.vn]
 match = -94.4%%
@@ -179,7 +179,7 @@ url = https://www.sec.gov/Archives/edgar/data/1606268/000119312514253996/0001193
 [www.pge.com]
 match = 0.0%%
 title = 
-url = https://www.pge.com/en/account/billing-and-assistance/understand-your-bill/net-energy-metering-bill.html
+url = https://www.pge.com/assets/pge/docs/account/billing-and-assistance/nem-bill-explainer.pdf
 
 [anta.com.vn]
 match = 0.0%%
