--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -159,7 +159,7 @@ url = https://www.sendo.vn/men-long-tuyet.htm
 [www.bebong.vn]
 match = 36.4%%
 title = Chăn lông tuyết cho bé
-url = https://www.bebong.vn/products/chan-long-tuyet-cho-be
+url = https://www.bebong.vn/products/chan-long-tuyet-cho-be?srsltid=AfmBOop1xeSrJOjQSISVEN4bv921S98FlR944agDzs3X_U7kM5Q58Mwg
 
 [demxanh.com]
 match = -18.5%%
