--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-04 10:41:01
+lastsearch = 2024-08-04 12:37:32
 
 [bedding.vn]
 match = -123.1%%
@@ -57,9 +57,9 @@ title = Bộ ga chun Elegant H156 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-elegant-h156
 
 [www.instagram.com]
-match = -284.6%%
-title = UGA College of Public Health | For doctoral student Tzu ...
-url = https://www.instagram.com/p/C3au3yItjnC/?img_index=publichealthuga
+match = -100.0%%
+title = 𝐆𝐚 𝐂𝐡𝐮𝐧 𝐘𝐚𝐮 𝐏𝐡𝐨𝐭𝐨𝐠𝐫𝐚𝐩𝐡𝐲 (@gachunyau)
+url = https://www.instagram.com/gachunyau/?hl=en
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -276.9%%
