--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-04 11:32:29
+lastsearch = 2024-08-04 12:44:29
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = NỆM CAO SU THIÊN NHIÊN EVERHOME - DELUXE
 url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome-deluxe-sieu-thi-nem-com.html
 
 [demxanh.com]
-match = -19.0%%
-title = Đệm bông ép chính hãng giảm 50 ...
-url = https://demxanh.com/dem-bong-ep.html
+match = -14.3%%
+title = Đệm bông ép Everhome 2m giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html
 
 [www.ebay.com]
 match = -128.6%%
@@ -28,8 +28,8 @@ url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-
 
 [sieuthidemonline.vn]
 match = -61.9%%
-title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
+title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
 
 [thegioidemviet.vn]
 match = -9.5%%
@@ -37,9 +37,9 @@ title = Bảng giá Đệm Bông Ép - Hà Nội
 url = https://thegioidemviet.vn/dem-bong-ep/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+match = 14.3%%
+title = Nệm EverHome TC 160x200x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-160x200x09.html
 
 [bachhoadem.vn]
 match = 28.6%%
