CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-04 00:20:41
+lastsearch = 2024-08-04 12:55:57
 
 [scholar.google.com]
 match = -43.8%%
@@ -32,9 +32,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [moveek.com]
-match = -200.0%%
-title = Rạp Galaxy Kinh Dương Vương - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/galaxy-kinh-duong-vuong/
+match = -175.0%%
+title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-kien-giang/
 
 [nhandan.vn]
 match = -62.5%%
@@ -108,7 +108,7 @@ url = http://hunglien.net/san-pham/chieu-lac/
 
 [primagold.com.vn]
 match = -225.0%%
-title = Giá vàng 9999 hôm nay tại 64 tỉnh 3/8/2024 | Bảng giá vàng
+title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -137.5%%
-title = 🛑 TRỰC TIẾP: U18 BẠC LIÊU - TÙNG DƯƠNG FC 🚩Giải ...
-url = https://m.facebook.com/Tynguyenmedia.vn/videos/-trực-tiếp-u18-bạc-liêu-tùng-dương-fc-giải-bóng-đá-u18-vsports-toàn-quốc-mùa-3-2/1640507346746178/
+match = -187.5%%
+title = HR - TUYỂN DỤNG | Manulife Tower - 29 Nguyễn Đình ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8413554252001881/
 
 [shopee.vn]
 match = -75.0%%
