--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-04 12:25:32
+lastsearch = 2024-08-04 12:49:32
 
 [munghoangphat.com]
 match = -24.0%%
@@ -58,8 +58,8 @@ url = https://manthutrang.com/products/man-chup-tu-bung-vien-chan-ren-cao-cap-ma
 
 [easydream.vn]
 match = -40.0%%
-title = Mùng Chụp Tự Bung Gấp Gọn Người Lớn Biên Hòa Đồng Nai
-url = https://easydream.vn/mung-chup-tu-bung-gap-gon-nguoi-lon-bien-hoa-dong-nai-287-25.html
+title = TOP 5 MÙNG CHỤP TỰ BUNG - MÀN CHỤP CAO CẤP EASY ...
+url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
 
 [www.youtube.com]
 match = -52.0%%
