--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-04 06:25:04
+lastsearch = 2024-08-04 12:55:36
 
 [www.everonvn.vn]
 match = -95.2%%
@@ -12,9 +12,9 @@ title = Bảng giá các kích thước ruột gối Everon Standard Soft
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-standard-soft.html
 
 [shopee.vn]
-match = -100.0%%
-title = Ruột gối hơi bông gòn cao cấp kháng khuẩn mẫu hoa nhí ...
-url = https://shopee.vn/Ruột-gối-hơi-bông-gòn-cao-cấp-kháng-khuẩn-mẫu-hoa-nhí-kích-thước-45x65cm-i.441837062.20823110424
+match = -114.3%%
+title = Ruột Gối Đầu Bông Gòn trắng tinh, Kích thước tiêu chuẩn ...
+url = https://shopee.vn/Ruột-Gối-Đầu-Bông-Gòn-trắng-tinh-Kích-thước-tiêu-chuẩn-45x65-và-ruột-ôm-35*105-i.5009645.19422327424
 
 [www.diepxuan.com]
 match = 4.8%%
@@ -27,14 +27,14 @@ title = Bảng giá mẫu ruột gối 45x65 Elambo ưu đãi và tốt nhất
 url = https://elambo.vn/ruot-goi-45x65-cm/
 
 [suongtuyet.com]
-match = -33.3%%
-title = Ruột Gối Bông Thấp - Classic Everon 45 x 65 cm
-url = https://suongtuyet.com/ruot-goi-dai-everon-45-x-65-cm
+match = -38.1%%
+title = Ruột Gối Bông Dày - Standard Everon 45 x 65 cm
+url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
 
 [www.lazada.vn]
 match = -85.7%%
 title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước 45x65
-url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html?srsltid=AfmBOop6rQldRlKBUWZU79h2j31XtcsIUsVJkor_tnTQHQLdew5U3ZsQ
+url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html
 
 [demxanh.com]
 match = -81.0%%
