--- a/images/tui-warmdream-180x200x14/config.ini
+++ b/images/tui-warmdream-180x200x14/config.ini
@@ -49,7 +49,7 @@ url = https://vwcaliforniaclub.com/threads/duvalay-as-replacement-for-upper-matt
 [www.tui.co.uk]
 match = 0.0%%
 title = 
-url = https://www.tui.co.uk/flight/flying-with-us/our-fleet
+url = https://www.tui.co.uk/destinations/info/dreamliner
 
 [htk684.com]
 match = -54.2%%
@@ -85,4 +85,9 @@ url = https://ucdq165.com/blog/lrrxzabx-255/
 match = -108.3%%
 title = tui warmdream 16 - The third continent / Wings of Fire Book 16 ...
 url = https://fowm924.com/bag/lrrxzabx-255/
+
+[www.evra504.com]
+match = -58.3%%
+title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - evra504.com
+url = https://www.evra504.com/bag/lrrxzabx-255/
 
