--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-08-04 11:53:07
+lastsearch = 2024-08-04 12:48:31
 
 [chieutruc.info]
 match = -100.0%%
@@ -42,9 +42,9 @@ title = Chiếu Cói Thân Vui Thái Bình
 url = https://www.facebook.com/p/Chiếu-Cói-Thân-Vui-Thái-Bình-100069860554625/
 
 [medlatec.vn]
-match = -77.3%%
-title = Bác sĩ giải đáp tỉ mỉ các chỉ số thai nhi theo tuần
-url = https://medlatec.vn/tin-tuc/bac-si-giai-dap-ti-mi-cac-chi-so-thai-nhi-theo-tuan-s74-n23646
+match = -109.1%%
+title = Sự phát triển của thai 18 tuần và những thay đổi trên cơ ...
+url = https://medlatec.vn/tin-tuc/su-phat-trien-cua-thai-18-tuan-va-nhung-thay-doi-tren-co-the-thai-phu-s74-n28778
 
 [www.lazada.vn]
 match = -68.2%%
@@ -280,4 +280,9 @@ url = https://www.sbv.gov.vn/webcenter/portal/vi/menu/rm/ls/lsttlnh
 match = -113.6%%
 title = Trang chủ :: Petrolimex (PLX) - Tập đoàn Xăng dầu Việt Nam
 url = https://www.petrolimex.com.vn/
+
+[hellobacsi.com]
+match = 0.0%%
+title = 
+url = https://hellobacsi.com/mang-thai/thai-ky/tam-ca-nguyet-2/thai-nhi-18-tuan/
 
