--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,26 +4,26 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-06-22 12:19:37
+lastsearch = 2024-08-04 12:52:30
 
 [www.diepxuan.com]
-match = 50.0%%
-title = Chiếu nhựa - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua.html
+match = 48.0%%
+title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 
 [www.facebook.com]
-match = 42.1%%
-title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+match = 20.0%%
+title = Chiếu Trúc Tre Việt Nam | Hanoi
+url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [demxanh.com]
-match = 16.0%%
-title = Chiếu trúc tăm rồng loại gập giá rẻ
-url = https://demxanh.com/chieu-truc-tam-rong-loai-gap.html
+match = -20.0%%
+title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
+url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 
 [chieucoi.com.vn]
-match = -72.0%%
-title = Home base - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
+match = -68.0%%
+title = Chiếu cói - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
 url = https://chieucoi.com.vn/
 
 [tchome.vn]
