--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-04 12:32:03
+lastsearch = 2024-08-04 13:20:58
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/@cuongkhii/video/7250838547173870853
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVXJuHZB&sig=ACfU3U2TjIhK6a_dkNYTMNxY9gpwj_SM_Q&hl=en&sa=X&ved=2ahUKEwi925KLztqHAxV9N2IAHbUZNmoQ6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVXKnG0H&sig=ACfU3U2f_5GgkKcQk7p-_G9O1UD7hGLZkA&hl=en&sa=X&ved=2ahUKEwiIge-C2dqHAxUYg4kEHTYyDqAQ6AF6BAgaEAM
 
 [everonchinhhang.vn]
 match = -26.9%%
