--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-08-04 05:48:06
+lastsearch = 2024-08-04 13:19:56
 
 [changagoidemsonghong.com]
-match = 4.2%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = -12.5%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -92,9 +92,9 @@ title = Mẫu 16 - Chăn Ga Gối Đệm Benlinda Hải Phòng
 url = https://changagoibenlinda.com/mau-16
 
 [bochangagoi.vn]
-match = -70.8%%
-title = Bộ chăn ga gối OZ Bedding - Top 5 mẫu chăn ga gối cao cấp ...
-url = https://bochangagoi.vn/
+match = -50.0%%
+title = Chăn ga vải Tencel TB512 - Bộ chăn ga gối OZ Bedding
+url = https://bochangagoi.vn/chan-ga-vai-tencel-tb512/
 
 [ninhouse.vn]
 match = -75.0%%
@@ -132,9 +132,9 @@ title = Mua bán bộ chăn ga gối nệm hàn quốc mới giá rẻ ở đâu
 url = https://dodungnoithat.vn/chan-ga-goi-nem-han-quoc-dep-gia-re-o-dau-sai-gon/
 
 [www.facebook.com]
-match = -70.8%%
-title = Chan ga goi nem Han Quoc gia re - MS hang: VIKOFUR 16-1 ...
-url = https://www.facebook.com/photo/?fbid=895871970464995&set=ms.c.eJxFzNsNwEAIA8GOIt42~;TcW5RCXz9Ea2EloQ6KiOx9~_thRH0~;Ab6lrCtZ596Nqn373Pva3nv28vnp54AZQ5Gk0~-.bps.a.895871950464997
+match = -45.8%%
+title = Chan ga goi nem Han Quoc gia re - MS hang: BL 16- ...
+url = https://www.facebook.com/photo.php?fbid=895881850464007&id=872530402799152&set=ms.c.eJw9ycEJACAMA8CNJCVtk~_6~;mCDq8zhP2eFCdgJavqZGTHwriBaffZ7aoncNFg~-~-.bps.a.895881843797341.1073741838.872530402799152&source=43
 
 [thitruongsi.com]
 match = -50.0%%
@@ -143,7 +143,7 @@ url = https://thitruongsi.com/bo-chan-ga-goi-cotton-phoi-mau-gia-re-1713025.html
 
 [goni.vn]
 match = -62.5%%
-title = Bộ Chăn Ga Gối Trẻ Trung, Mềm Mịn, Mát Mẻ - Ưu đãi tháng 07
+title = Bộ Chăn Ga Gối Trẻ Trung, Mềm Mịn, Mát Mẻ - Ưu đãi tháng 08
 url = https://goni.vn/chan-ga-goi/
 
 [flexhouse.vn]
