--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-04 12:25:11
+lastsearch = 2024-08-04 13:19:35
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoo1Cd26bcd33hbFW0LOc46NdyuAlmleHPsKkmDN8qIcuFl4NkmR
 
 [everon.online]
 match = -5.0%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOoq2rZ0BXiHe8KNzo-0w3Iicf-JXrNav7nzPf-Dmb_SLOAR8bEro
 
 [www.diepxuan.com]
 match = 100.0%%
