--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-04 12:23:45
+lastsearch = 2024-08-04 13:18:13
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -32,9 +32,9 @@ title = Discovery of a novel third-generation EGFR inhibitor and ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
-match = -11.8%%
-title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWKL3m-e&sig=ACfU3U1v2IeLs-FWinajxkOPzc_KpNBDtQ&hl=en&sa=X&ved=2ahUKEwiK8L-dzNqHAxU-MlkFHRcPIhEQ6AF6BAgbEAM
+match = -200.0%%
+title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0uau-1Kh&sig=ACfU3U26hm_wemk8DwdW2cwrUpStDXIoFg&hl=en&sa=X&ved=2ahUKEwi7r-mz2NqHAxWDkokEHeSIA5IQ6AF6BAgZEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -29.4%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOopkuBg5uJim7FUJqpBfAoX2XXM4v3Sr_Dwq8cxjZ4cJCbGzrBV2
 
 [www.kvaser.cn]
 match = -5.9%%
