--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-04 11:42:32
+lastsearch = 2024-08-04 13:21:42
 
 [www.instagram.com]
-match = -169.2%%
-title = Embarking on a new journey, @Dior is set ...
-url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -97,8 +97,8 @@ title = 'Fu' is Joy and should be shared widely in this Lunar Chinese ...
 url = https://touch.facebook.com/MightyWhiteMY/photos/a.591336504336777.1073741828.587718204698607/1145854872218268/?type=3&source=48&__tn__=EH-R
 
 [www.pinterest.com]
-match = -307.7%%
-title = Vintage armchair "Boxer" by Kwok Hoi Chan Boxer for Steiner ...
+match = -184.6%%
+title = Vintage armchair "Boxer" by Kwok Hoi Chan ...
 url = https://www.pinterest.com/pin/938437641088783742/
 
 [my.linkedin.com]
