--- a/images/chieu-dieu-hoa-co-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-16.html
 lastopen = 2024-06-06 16:55:12
 
 [search]
-lastsearch = 2024-08-04 10:19:11
+lastsearch = 2024-08-04 13:20:40
 
 [shopee.vn]
 match = 0.0%%
@@ -24,7 +24,7 @@ url = https://goni.vn/chieu-dieu-hoa-goni/
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOor3NeHLAZXZqVvcbUVbfJ8vB2JQULL9nnu7EIwNP1Cp4CMIEAAE
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [giadunganhvan.vn]
 match = 70.8%%
@@ -39,7 +39,7 @@ url = https://thegioinem.com/top-chieu-dieu-hoa-hot-nhat-nam.html
 [sieuthidem.vn]
 match = 16.7%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOor8njmS8yryC3vs7h-vLCFLjk7tpaA0CRYkEcXOSYdw2rR5Fdlo
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [lybalansieucute.com]
 match = 29.2%%
@@ -52,9 +52,9 @@ title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào 
 url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [www.lazada.vn]
-match = -50.0%%
-title = Chiếu điều hoà mát lạnh tặng kèm 2 bao gối 1.6 x 2. m , ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-mat-lanh-tang-kem-2-bao-goi-16-x-2-m-chieu-cao-su-tran-3-lop-mem-min-i2412274423.html?srsltid=AfmBOoq8eB_0kgaJeGTyQPzvohz6I7SKhDPY2D1zIyDujRpGCE5hauky
+match = 8.3%%
+title = Chiếu Mây Điều Hòa Chiếu mát mùa hè. ...
+url = https://www.lazada.vn/products/chieu-may-dieu-hoa-chieu-mat-mua-he-chieu-dieu-hoa-16x-2m-loai-tot-thoang-khi-mat-ruoi-ben-dep-co-the-gap-gon-giup-ban-tan-huong-nhung-giay-phut-thu-gian-i517380866.html
 
 [ababy.com.vn]
 match = -4.2%%
