--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-04 12:36:15
+lastsearch = 2024-08-04 13:16:47
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -112,8 +112,8 @@ title = Bánh xe đu quay sáng tạo chuyển động vĩnh cửu con lắc ...
 url = https://tiki.vn/banh-xe-du-quay-sang-tao-chuyen-dong-vinh-cuu-con-lac-newton-p168229177.html
 
 [vishipel.com.vn]
-match = -260.0%%
-title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
+match = -226.7%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng ...
 url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
 [www.victoriavn.com]
@@ -450,4 +450,9 @@ url = https://journal.vnuf.edu.vn/vi/article/download/966/872/1740
 match = -186.7%%
 title = Hệ Thống cửa hàng Circle K Việt NamCircle K Việt Nam
 url = https://www.circlek.com.vn/vi/he-thong-circle-k/
+
+[www.tonggiaophanhanoi.org]
+match = -126.7%%
+title = Tháng Tám - 2024 | Tổng Giáo Phận Hà ...
+url = https://www.tonggiaophanhanoi.org/thang-tam-2024/
 
