--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-04 11:31:27
+lastsearch = 2024-08-04 13:28:42
 
 [www.bible.com]
-match = -157.1%%
-title = EZEKIELA 16 | MIZOVBSI Bible | YouVersion
-url = https://www.bible.com/bible/253/EZK.16.MIZOVBSI
+match = -128.6%%
+title = MARKA 16 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MRK.16.MIZCLBSI
 
 [tiki.vn]
 match = -171.4%%
@@ -24,7 +24,7 @@ url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 [munghoangphat.com]
 match = -135.7%%
 title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
 
 [manthutrang.com]
 match = -207.1%%
