--- a/images/tham-xop-18/config.ini
+++ b/images/tham-xop-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-xop-18.html
 lastopen = 2024-06-07 00:22:33
 
 [search]
-lastsearch = 2024-08-04 10:36:40
+lastsearch = 2024-08-04 13:18:36
 
 [www.sendo.vn]
 match = 0.0%%
@@ -22,14 +22,14 @@ title = THẢM TRẢI SÀN NỈ DỆT CAO CẤP 18 TẤM
 url = https://shopee.vn/THẢM-TRẢI-SÀN-NỈ-DỆT-CAO-CẤP-18-TẤM-THẢM-XỐP-GHÉP-MIẾNG-TƯỜNG-LÂM-SANG-TRỌNG-PHÙ-HỢP-VỚI-MỌI-KHÔNG-GIAN-NỘI-THẤT-i.157222824.3315202784
 
 [thamtretho.com]
-match = -354.5%%
-title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an ...
+match = -363.6%%
+title = Thảm xốp lót sàn cho bé mang lại không gian vui chơi an toàn
 url = https://thamtretho.com/
 
 [trieuchau.com]
 match = -200.0%%
-title = 30*30*18 tấm - Thảm xốp mặt nỉ ghép Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28077/Tham-Xop-30x30cm/303018-tam--Tham-xop-mat-ni-ghep-Au-Lac
+title = 30*30*18 tấm - Thảm xốp trải sàn nỉ Âu Lạc
+url = https://trieuchau.com/vi-vn/1057/28066/Tham-Xop-30x30cm/303018-tam--Tham-xop-trai-san-ni-Au-Lac
 
 [www.lazada.vn]
 match = -136.4%%
