--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-04 13:32:50
+lastsearch = 2024-08-04 13:48:43
 
 [shopee.vn]
-match = -50.0%%
-title = [ GIÁ SỈ ]Thảm lau chân LEN MỊN thấm hút tốt KHỔ 40 ...
-url = https://shopee.vn/-GIÁ-SỈ-Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-KHỔ-40*60cmsẽ-i.275792820.7480238002
+match = -8.3%%
+title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
+url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -75.0%%
-title = Thảm nỉ bàn chân lau chân hình chữ nhật, chùi chân len ...
-url = https://www.lazada.vn/products/tham-ni-ban-chan-lau-chan-hinh-chu-nhat-chui-chan-len-mem-min-chong-tron-truot-sieu-hot-4060cm-i2107223051.html
+match = -83.3%%
+title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
+url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html
 
 [megahomevietnam.com]
 match = 20.0%%
@@ -83,8 +83,8 @@ url = https://latiendadeljardin.com/vi/felpudos/felpudo-40x60-cm-welcome-negro.h
 
 [sieuthinguyenkim.com]
 match = -62.5%%
-title = Thảm lông mềm trải chân giường, lót ghế ngồi nhiều size 40x60
-url = https://sieuthinguyenkim.com/tham-long-mem-trai-chan-giuong-nti177943446.html
+title = Thảm chùi chân phòng tắm CHỐNG TRƯỢT, lau chân mềm ...
+url = https://sieuthinguyenkim.com/tham-chui-chan-phong-tam-chong-nsh10311217225.html
 
 [huyenikea.com]
 match = -4.2%%
