CI images update

--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-04 12:55:57
+lastsearch = 2024-08-04 13:47:56
 
 [scholar.google.com]
 match = -43.8%%
@@ -372,9 +372,9 @@ title = Size Guide
 url = https://pandora.norbreeze.vn/pages/size-guide-1
 
 [m.facebook.com]
-match = -187.5%%
-title = HR - TUYỂN DỤNG | Manulife Tower - 29 Nguyễn Đình ...
-url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8413554252001881/
+match = -106.2%%
+title = HR - TUYỂN DỤNG | ⛩️⛩️⛩️ 𝐇Ồ𝐍𝐆 𝐓𝐑À 𝐍𝐆Ô 𝐆𝐈𝐀 ...
+url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8413850388638934/
 
 [shopee.vn]
 match = -75.0%%
@@ -692,9 +692,9 @@ title = Lịch chiếu phim CGV Aeon Tân Phú
 url = https://www.momo.vn/cinema/rap/cgv/cgv-aeon-tan-phu-21
 
 [baotintuc.vn]
-match = -200.0%%
-title = Nâng cao hiệu quả hoạt động vận động, tập hợp cựu chiến ...
-url = https://baotintuc.vn/thoi-su/nang-cao-hieu-qua-hoat-dong-van-dong-tap-hop-cuu-chien-binh-o-co-so-20240802170325509.htm
+match = -37.5%%
+title = Giá xuất khẩu gạo tăng hơn 18%%
+url = https://baotintuc.vn/thi-truong-tien-te/gia-xuat-khau-gao-tang-hon-18-20240804133504826.htm
 
 [www.bigc.vn]
 match = -143.8%%
