--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-04 10:38:20
+lastsearch = 2024-08-04 13:42:29
 
 [burningman.org]
 match = 0.0%%
@@ -885,4 +885,9 @@ url = https://deserthopetreatment.com/blog/news/burning-man-good-bad/
 match = -6.7%%
 title = WHEC.com: News10NBC
 url = https://www.whec.com/
+
+[www.congress.gov]
+match = 0.0%%
+title = 
+url = https://www.congress.gov/member/district/mark-desaulnier/D000623
 
