--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-04 12:40:36
+lastsearch = 2024-08-04 13:38:54
 
 [changagoidemsonghong.com]
-match = -55.6%%
-title = HOme Collection - dòng chăn ga gối cotton nhập khẩu hiệu ...
-url = https://changagoidemsonghong.com/home-collection
+match = 7.4%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [demhong.vn]
 match = 11.1%%
