--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-04 12:34:32
+lastsearch = 2024-08-04 13:47:35
 
 [shopee.vn]
-match = -11.1%%
-title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
-url = https://shopee.vn/-CHUYÊN-SỈ-🌺-chăn-băng-lông-tuyết-nhung-chăn-Tuyết-Sin-Thái-Lan-cho-mùa-đông-ấm-áp-loại-3kg-4kg-5kg-i.126028938.15195323838
+match = -25.9%%
+title = chăn lông cừu 4kids thái lan giá tốt Tháng 7, 2024
+url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
 
 [www.lazada.vn]
 match = -44.4%%
