--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-04 12:15:32
+lastsearch = 2024-08-04 13:46:52
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=6vFiUCFz494
 [books.google.com]
 match = -156.2%%
 title = Nizu #3: Bạn bè - Page 14 - Google Books Result
-url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+16&source=bl&ots=dtkNsfmq62&sig=ACfU3U3SifHI_fVN4ypHmQi4BoXVt2ccqg&hl=en&sa=X&ved=2ahUKEwj1rM6yytqHAxVdMVkFHTggNYUQ6AF6BAgbEAM
+url = https://books.google.com/books?id=saXpEAAAQBAJ&pg=PA14&lpg=PA14&dq=chieu+lac+soc+16&source=bl&ots=dtkNsgil42&sig=ACfU3U3rdQ5sYSWbpJaMKrANK4m-Og_NFQ&hl=en&sa=X&ved=2ahUKEwiLtNzn3tqHAxVaEUQIHdsbAzgQ6AF6BAgZEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
