--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-04 11:46:55
+lastsearch = 2024-08-04 13:37:06
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,7 +14,7 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOopoyg4JyvfKKd7h2j0m8qgItn3u5E7CScigk8NTL1K27jqG3HlJ
 
 [chieutrelanlan.com]
 match = -58.3%%
