--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-08-04 12:27:56
+lastsearch = 2024-08-04 13:35:44
 
 [demxanh.com]
-match = 64.7%%
-title = Chiếu trúc hạt đen
-url = https://demxanh.com/chieu-truc-hat-den-ha-noi.html?srsltid=AfmBOopjUjMAkVJ74QN_EFcA0ezrjEIzJfkIE_D6w_GlMvGpLq6BRs41
+match = -135.3%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [dem24h.vn]
 match = -29.4%%
