--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-08-04 11:54:49
+lastsearch = 2024-08-04 13:43:30
 
 [www.amazon.com]
-match = -100.0%%
-title = Ghe da yeu thuong - Hugo Luân
-url = https://www.amazon.com/Ghe-thuong-Explicit-Hugo-Luân/dp/B0CM6V2CPL
+match = -309.1%%
+title = Ghe Tham Nang Da [Explicit] : franchesca: Música Digital
+url = https://www.amazon.com/-/es/franchesca/dp/B09D3V162X
 
 [chungauto.vn]
-match = -336.4%%
-title = Bọc ghế da Nappa cho ô tô | Giá ưu đãi 2024, trả góp 0%%
-url = https://chungauto.vn/boc-ghe-da-nappa-p993.html
+match = -209.1%%
+title = Bọc ghế da công nghiệp cho ô tô hàng chuẩn
+url = https://chungauto.vn/ghe-da-cong-nghiep-oto-p995.html
 
 [decoviet.vn]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -318.2%%
-title = SG718 Ghế xoay da trưởng phòng được ưa chuộng nhất ...
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg718
+match = -290.9%%
+title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
+url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
 
 [dandoxe.com]
 match = -154.5%%
@@ -104,7 +104,7 @@ url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 [www.lazada.vn]
 match = -290.9%%
 title = Đệm Lót Ghế Da Chống Bẩn Chống Thấm Nước Dày Dặn ...
-url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html
+url = https://www.lazada.vn/products/dem-lot-ghe-da-chong-ban-chong-tham-nuoc-day-dan-dem-lot-ghe-ban-an-dem-ghe-chong-truot-hinh-mong-ngua-van-phong-ngoi-lau-i2424774730.html?srsltid=AfmBOoqKeC3Hh1oA9jq33LuJFmOkgcAjv79RbUZX5gbhDDhw5c8Ni-yM
 
 [richhome.vn]
 match = -190.9%%
