CI images update

--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-08-04 13:45:56
+lastsearch = 2024-08-04 14:12:41
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -32,9 +32,9 @@ title = Ruột gối Sông hồng khuyến mại giá rẻ nhất Hà Nội
 url = https://changagoidemsonghong.online/ruot-chan-ruot-goi-song-hong.html
 
 [demxanh.com]
-match = -150.0%%
-title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
-url = https://demxanh.com/ruot-goi.html
+match = -207.1%%
+title = Ưu điểm của ruột gối? Loại ruột gối nào tốt để sử dụng?
+url = https://demxanh.com/uu-diem-cua-ruot-goi-loai-ruot-goi-nao-tot-de-su-dung.html
 
 [www.diepxuan.com]
 match = -100.0%%
@@ -89,7 +89,7 @@ url = https://tiki.vn/ruot-goi/c23366
 [ru9.vn]
 match = -171.4%%
 title = Kinh Nghiệm Nên Mua Ruột Gối Loại Nào Để Ngủ Ngon
-url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao?srsltid=AfmBOoo4RzfersOMW8fmnWe4ElNQupocHxUjeA2y6RwCL3PKe0PjWkCb
+url = https://ru9.vn/blogs/magazine/nen-mua-ruot-goi-loai-nao
 
 [www.nguonhangsigiare.com.vn]
 match = -235.7%%
