--- a/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
+++ b/images/bo-ga-chun-chan-lua-warmdream-180x200-hq/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-lua-warmdream-180x200-hq.html
 lastopen = 2024-06-10 01:18:52
 
 [search]
-lastsearch = 2024-08-04 11:28:59
+lastsearch = 2024-08-04 14:28:04
 
 [www.diepxuan.com]
 match = 45.0%%
 title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html?srsltid=AfmBOooHvXNlgLECQIDRheOQfXALFwThwM-6nnvoVKnmiubUHMSuG7Mv
+url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
 
 [www.amazon.com]
 match = 10.0%%
