--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-04 13:37:27
+lastsearch = 2024-08-04 14:16:52
 
 [www.youtube.com]
 match = -147.4%%
@@ -349,7 +349,7 @@ url = https://dentrongcaylgl.com/nhung-dieu-thu-vi-ve-cay-moc-huong
 [www.lazada.vn]
 match = -100.0%%
 title = Set 3 Cây hoa mộc, mộc hương ta hoa trắng thơm lâu
-url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-thom-lau-i1734591241.html
+url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-thom-lau-i1734591241.html?srsltid=AfmBOordTtXQaAjFzUo0nXtFKsWaqttA-xlkZ9q0eqH7wFO3dGpPHV8V
 
 [caycanhnoithat.net]
 match = -142.1%%
