--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-04 10:50:56
+lastsearch = 2024-08-04 14:17:34
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -126.7%%
+title = Ways Station Gaming - "Nghiêng nước ...
+url = https://www.facebook.com/waysstation/photos/a.179106562519975/1171642583266363/?type=3
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -330,4 +330,9 @@ url = https://saca.com.vn/en/sgc.html
 match = -180.0%%
 title = Không gian sống tinh tế, chan hòa cùng thiên nhiên
 url = https://masterisehomes.com/lumiere-boulevard/vn/project
+
+[quizlet.com]
+match = -160.0%%
+title = Đề cương ôn thi môn Lý [HK1 - Lớp 12] Flashcards
+url = https://quizlet.com/vn/556031834/de-cuong-on-thi-mon-ly-hk1-lop-12-flash-cards/
 
