--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-04 11:39:26
+lastsearch = 2024-08-04 14:15:09
 
 [www.zillow.com]
-match = -115.4%%
-title = 18 Long St #18, East Pt, GA 30344
-url = https://www.zillow.com/homedetails/18-Long-St-18-East-Pt-GA-30344/249124519_zpid/
+match = -69.2%%
+title = 18 Long St, Newnan, GA 30263
+url = https://www.zillow.com/homedetails/18-Long-St-Newnan-GA-30263/54506040_zpid/
 
 [blog.massmutual.com]
 match = -276.9%%
@@ -107,9 +107,9 @@ title = Regal Hollywood @ North I-85 Movie Tickets and ...
 url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
-match = -69.2%%
-title = Senoia Police Department, GA
-url = https://www.facebook.com/senoiapolice/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.bpas.org]
 match = -184.6%%
