--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-04 09:20:43
+lastsearch = 2024-08-04 14:19:59
 
 [quizlet.com]
 match = -170.0%%
@@ -47,9 +47,9 @@ title = Loom + Forge Ren 16-pc. Stoneware Dinnerware Set
 url = https://www.jcpenney.com/p/loom-forge-ren-16-pc-stoneware-dinnerware-set/ppr5008057935?pTmplType=regular
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 16.7%%
+title = MC Ren
+url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
 match = -430.0%%
@@ -117,9 +117,9 @@ title = Georgia Renaissance Festival: Celebrating 39 Years of Cheers!
 url = https://www.garenfest.com/
 
 [www.reddit.com]
-match = -310.0%%
-title = 8:34 - "I'm really getting into this guy Ren..."
-url = https://www.reddit.com/r/ren/comments/1dg1e29/834_im_really_getting_into_this_guy_ren/
+match = -460.0%%
+title = What is your best "Ren is the type of guy to..."? : r/Persona5
+url = https://www.reddit.com/r/Persona5/comments/15xugqf/what_is_your_best_ren_is_the_type_of_guy_to/
 
 [cca.hawaii.gov]
 match = -120.0%%
@@ -187,9 +187,9 @@ title = Snoke/Ren '16 Men's
 url = https://geekteez.com/index.php?route=product/product&product_id=3688
 
 [www.tiktok.com]
-match = -20.0%%
-title = Ren (@renstercec)
-url = https://www.tiktok.com/@renstercec
+match = -130.0%%
+title = Ren (@renmakesmusic) Official
+url = https://www.tiktok.com/@renmakesmusic?lang=en
 
 [www.marketfairshoppes.com]
 match = -300.0%%
