CI images update

--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-04 12:37:32
+lastsearch = 2024-08-04 14:37:45
 
 [bedding.vn]
 match = -123.1%%
@@ -57,9 +57,9 @@ title = Bộ ga chun Elegant H156 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-elegant-h156
 
 [www.instagram.com]
-match = -100.0%%
-title = 𝐆𝐚 𝐂𝐡𝐮𝐧 𝐘𝐚𝐮 𝐏𝐡𝐨𝐭𝐨𝐠𝐫𝐚𝐩𝐡𝐲 (@gachunyau)
-url = https://www.instagram.com/gachunyau/?hl=en
+match = -284.6%%
+title = UGA College of Public Health | For doctoral student Tzu ...
+url = https://www.instagram.com/p/C3au3yItjnC/?img_index=publichealthuga
 
 [pubmed.ncbi.nlm.nih.gov]
 match = -276.9%%
@@ -107,9 +107,9 @@ title = Ga chun - Chăn ga gối đệm Phương Bắc
 url = https://changagoidemphuongbac.com/ga-chun/
 
 [profiles.ucsd.edu]
-match = -69.2%%
-title = Karen Messer | UCSD Profiles
-url = https://profiles.ucsd.edu/karen.messer
+match = -76.9%%
+title = Mingxiong Huang - UCSD Profiles
+url = https://profiles.ucsd.edu/mingxiong.huang
 
 [www.mtech.edu]
 match = -61.5%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -261.5%%
-title = Expert Profile: Je Hyeong Bahk - UC Research Directory
-url = https://researchdirectory.uc.edu/p/bahkjg
+match = -323.1%%
+title = Changjoo Kim - UC Research Directory - University of Cincinnati
+url = https://researchdirectory.uc.edu/p/changjkm
 
 [thegioinem.com]
 match = -230.8%%
