--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-03 23:45:19
+lastsearch = 2024-08-04 14:27:43
 
 [shopee.vn]
 match = -162.5%%
@@ -275,4 +275,9 @@ url = https://www.filumena.net/vi/cac-ngay-le-trong-cong-giao-le-buoc-le-nghi-vi
 match = 53.8%%
 title = CHAN HOI YING
 url = https://www.christies.com/en/lot/lot-5751621
+
+[leflair.com]
+match = -131.2%%
+title = Nước rửa chân khử mùi hôi, ngăn ngừa nấm HAKINI...
+url = https://leflair.com/en/shop/nuoc-rua-chan-khu-mui-hoi-ngan-ngua-nam-hakinika-98798
 
