--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-04 10:47:34
+lastsearch = 2024-08-04 14:29:49
 
 [www.dem365.vn]
 match = -81.0%%
@@ -39,7 +39,7 @@ url = https://www.youtube.com/watch?v=ZjibqQJbDZY
 [www.lazada.vn]
 match = -33.3%%
 title = Chăn Phao Siêu Nhẹ Mùa đông Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/?srsltid=AfmBOoqn58CeYJboXWudXsgmpPh5a0KGKuZTDAOUk53rWCuk63m7HpJr
+url = https://www.lazada.vn/tag/chan-phao-sieu-nhe-mua-dong/
 
 [docauquanghuy.com]
 match = -33.3%%
