--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-04 13:37:06
+lastsearch = 2024-08-04 14:34:00
 
 [chieutrucsaigon.com]
 match = 16.7%%
@@ -14,12 +14,12 @@ url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-san-pham-doc-da
 [demxanh.com]
 match = -8.3%%
 title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html?srsltid=AfmBOopoyg4JyvfKKd7h2j0m8qgItn3u5E7CScigk8NTL1K27jqG3HlJ
+url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
 
 [chieutrelanlan.com]
-match = -58.3%%
-title = Chiếu tre, trúc 1m4 hạt nhỏ không viền màu trắng bền đẹp
-url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-140x190cm-15.html
+match = -66.7%%
+title = Chiếu trúc 0.8m hạt nhỏ loại không viền màu trắng chất ...
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-80x190cm-19.html
 
 [trangvangvietnam.com]
 match = -37.5%%
