--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-04 13:48:15
+lastsearch = 2024-08-04 14:30:10
 
 [dongagroup.vn]
 match = -272.7%%
 title = Hơn 26 mẫu giường ngủ 2m giá rẻ | giao hàng tận nhà
-url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html
+url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html?srsltid=AfmBOoqSp-CIQMOrUNeU_Qzit_feLQOCYE_D9EclZvaovSH5zUYoVyUm
 
 [phana.com.vn]
 match = -63.6%%
@@ -19,7 +19,7 @@ url = https://phana.com.vn/giuong-y-te-2-tay-quay-zk26-1
 [noithatduongdong.com]
 match = 45.5%%
 title = Giường tầng sắt
-url = https://noithatduongdong.com/giuong-tang-sat
+url = https://noithatduongdong.com/giuong-tang-sat?srsltid=AfmBOooTk0FxTw7Lupvj61xyUxv3-EhKHZ9LKifDbZmjJjb9lzqhZWtP
 
 [giuonggaphoaphat.com]
 match = -27.3%%
