--- a/images/man-tu-bung-18/config.ini
+++ b/images/man-tu-bung-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-18.html
 lastopen = 2024-06-10 00:37:41
 
 [search]
-lastsearch = 2024-08-04 13:30:05
+lastsearch = 2024-08-04 14:34:21
 
 [shopee.vn]
 match = -171.4%%
@@ -107,9 +107,9 @@ title = Holy Bible (Mizo) | Johana 3:15-18
 url = https://www.facebook.com/groups/MizoHolyBible/posts/johana-315-18tupawh-a-ring-apiangin-amah-avanga-chatuana-nunna-an-neihna-turin-p/4674411329291742/
 
 [www.churchofjesuschrist.org]
-match = -35.7%%
-title = Doktrin na ol Kavanen 89
-url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/89?lang=tpi
+match = -28.6%%
+title = Doktrin na ol Kavanen 78
+url = https://www.churchofjesuschrist.org/study/scriptures/dc-testament/dc/78?lang=tpi
 
 [sieuthinguyenkim.com]
 match = -128.6%%
@@ -137,9 +137,9 @@ title = Eira Azieraa (@eiraaziera6699)’s videos with Rindu Ayah ...
 url = https://www.tiktok.com/@eiraaziera6699/video/7397729143904931079
 
 [en.wikipedia.org]
-match = -14.3%%
-title = Emperor Gaozu of Han
-url = https://en.wikipedia.org/wiki/Emperor_Gaozu_of_Han
+match = 7.1%%
+title = SCP Foundation
+url = https://en.wikipedia.org/wiki/SCP_Foundation
 
 [bandcamp.com]
 match = -50.0%%
