--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-04 04:42:17
+lastsearch = 2024-08-04 14:35:22
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -37,9 +37,9 @@ title = US strategic bombers conduct drills with Japan and South ...
 url = https://www.vietnam.vn/en/may-bay-nem-bom-chien-luoc-my-tap-tran-voi-nhat-han-o-ban-dao-trieu-tien/
 
 [www.youtube.com]
-match = 0.0%%
-title = 
-url = https://www.youtube.com/watch?v=azfAgPKgIYs
+match = 5.0%%
+title = Counting 1 to 30 in Korean
+url = https://www.youtube.com/watch?v=UDwOw5ckCAs
 
 [som.yale.edu]
 match = -110.0%%
@@ -312,9 +312,9 @@ title = Original Article
 url = https://synapse.koreamed.org/articles/1119644
 
 [www.quora.com]
-match = -100.0%%
-title = Why did my niece get 12%% Korean in her DNA test ...
-url = https://www.quora.com/Why-did-my-niece-get-12-Korean-in-her-DNA-test-My-side-of-the-family-is-Eastern-European-Italian-French-and-German-while-her-mother-is-Danish
+match = -115.0%%
+title = What Korean letter looks like a 12 or is paired up ...
+url = https://www.quora.com/What-Korean-letter-looks-like-a-12-or-is-paired-up-with-another-to-look-like-a-12
 
 [liquipedia.net]
 match = -15.0%%
@@ -425,4 +425,9 @@ url = https://x.com/mgaldino
 match = -40.0%%
 title = HISTORICAL DIARY 3 - DECEMBER 1951
 url = https://www.koreanwar2.org/kwp2/usmc/003/M003_CD3_HISTORICAL_DIARY_DECEMBER_1951_3.pdf
+
+[www.timebie.com]
+match = -100.0%%
+title = 12:00 PM Korea Time to Your Local Time Conversion
+url = https://www.timebie.com/std/korea.php?q=12
 
