--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -8,7 +8,7 @@ lastsearch = 2024-08-04 14:27:03
 
 [shopee.vn]
 match = -216.7%%
-title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
+title = bộ thảm trải ghế giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ thảm trải ghế
 
 [goiaura.com]
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -258.3%%
-title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
-url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
+match = -116.7%%
+title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
+url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
 
 [vn.my-best.com]
 match = -233.3%%
