--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-04 10:39:19
+lastsearch = 2024-08-04 14:55:16
 
 [www.gov.uk]
 match = 0.0%%
@@ -1190,4 +1190,9 @@ url = https://www.bible.com/bible/116/EXO.16.31-35.NLT
 match = -73.3%%
 title = Indianapolis Public Library: Home
 url = https://www.indypl.org/
+
+[www.king5.com]
+match = -246.7%%
+title = Seattle's Leading Local News: Weather, Traffic, Sports and ...
+url = https://www.king5.com/
 
