--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-04 06:24:45
+lastsearch = 2024-08-04 14:46:57
 
 [www.tui.co.uk]
-match = 0.0%%
-title = Buy South Korean won
-url = https://www.tui.co.uk/travel-money/buy-south-korean-won/
+match = -183.3%%
+title = Asia Holidays 2024 / 2025 - Destinations
+url = https://www.tui.co.uk/destinations/asia/holidays-asia.html
 
 [uk.trip.com]
 match = 0.0%%
@@ -57,9 +57,9 @@ title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -350.0%%
-title = We take travel to new heights: TUI launches holiday trips ...
-url = https://www.linkedin.com/posts/tuigroup_we-take-travel-to-new-heights-tui-launches-activity-7180438234118643713-PVeJ
+match = -200.0%%
+title = TUI
+url = https://www.linkedin.com/company/tuigroup
 
 [maritime-executive.com]
 match = -308.3%%
@@ -112,9 +112,9 @@ title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
 
 [www.telegraph.co.uk]
-match = -333.3%%
-title = Olympics canoe slalom: Joe Clarke goes for gold for Team ...
-url = https://www.telegraph.co.uk/olympics/2024/08/01/olympics-canoe-slalom-live-joe-clarke-latest-paris-2024/
+match = -125.0%%
+title = The 50 best beaches in the world
+url = https://www.telegraph.co.uk/travel/destinations/best-beaches-in-the-world/
 
 [www.oneworld.com]
 match = -283.3%%
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -325.0%%
-title = TUI Musement: Book Tickets for Experiences and Activities ...
-url = https://www.tuimusement.com/uk/
+match = -366.7%%
+title = Book Tickets for Experiences and Activities Worldwide | TUI ...
+url = https://www.tuimusement.com/us/
 
 [www.dixondirectional.com]
 match = -166.7%%
