--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-04 10:00:54
+lastsearch = 2024-08-04 14:47:16
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -12,9 +12,9 @@ title = Bộ ga chun coco 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-ga-chun-coco-180x200.html
 
 [shopee.vn]
-match = -68.2%%
-title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
-url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
+match = 13.6%%
+title = Bộ Ga Gối Bo Chun Trần Phi Lụa Coco
+url = https://shopee.vn/product/494447407/24864025138
 
 [m.facebook.com]
 match = -18.2%%
@@ -27,8 +27,8 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -59.1%%
-title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, ...
+match = -118.2%%
+title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, chăn 4kg cực ...
 url = https://www.lazada.vn/products/chan-ga-goi-ni-coco-hang-loai-1-sieu-mem-muot-chan-4kg-cuc-am-mua-thu-dong-i2492985749-s12208197211.html?from_gmc=1&fl_tag=1
 
 [www.instagram.com]
@@ -47,9 +47,9 @@ title = Bộ Ga Gối Chun Siêu Sang, Giá Khuyến Mãi, Tiết Kiệm Tối .
 url = https://www.sendo.vn/bo-ga-goi-chun.htm
 
 [demxanh.com]
-match = -27.3%%
-title = Chiếu cao su non Coco bo chun màu hồng
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-hong.html
+match = -50.0%%
+title = Chiếu cao su non Coco bo chun màu xanh dương
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-duong.html
 
 [www.tiktok.com]
 match = -127.3%%
@@ -95,4 +95,9 @@ url = https://metric.vn/bo-ga-goi-dem?utm_content=report-preview&download=1
 match = 33.3%%
 title = Bộ Ga Chun Chần
 url = https://ngungon.com/danh-muc-san-pham/chan-ga-goi/bo-chan-ga/bo-ga-chun-chan/
+
+[alnena.vn]
+match = 45.5%%
+title = Bộ Chăn Ga Gối Chun Trần
+url = https://alnena.vn/collections/bo-chan-ga-goi-chun-tran
 
