--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-08-04 10:25:55
+lastsearch = 2024-08-04 14:51:27
 
 [www.lazada.vn]
 match = -60.9%%
@@ -74,7 +74,7 @@ url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html?srsltid=AfmBOoqZxkLt8fixKOkLfDOlND_tLyE3u0UNKSEN3erAlE4hYrZAbuDp
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html
 
 [h5.lazada.vn]
 match = -17.4%%
