--- a/images/tam-trai-ks-uc-260-300/config.ini
+++ b/images/tam-trai-ks-uc-260-300/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-260-300.html
 lastopen = 2024-06-07 00:15:36
 
 [search]
-lastsearch = 2024-08-04 14:30:31
+lastsearch = 2024-08-04 14:52:07
 
 [www.cms.gov]
 match = 4.5%%
@@ -127,9 +127,9 @@ title = MEET ALISON MASS
 url = https://www.stern.nyu.edu/sites/default/files/assets/documents/STERNbusiness-Sp16-Meet-Alison-Mass.pdf
 
 [www.ncbi.nlm.nih.gov]
-match = -118.2%%
-title = Protein acylation: mechanisms, biological functions and ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9797573/
+match = -113.6%%
+title = Resilience and Equity in a Time of Crises: Investing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8392137/
 
 [westsideobserver.com]
 match = -58.3%%
@@ -227,9 +227,9 @@ title = MAPA 2035 Long Range Transportation Plan
 url = https://mapacog.org/wp-content/uploads/2015/10/LRTP_2035_Amendment2.pdf
 
 [www.ars-grin.gov]
-match = -18.2%%
-title = Plant Inventory No. 199, Part II
-url = https://www.ars-grin.gov/npgs/pi_books/scans/pi199pt2.pdf
+match = 13.6%%
+title = Plant Inventory No. 205
+url = https://www.ars-grin.gov/npgs/pi_books/scans/pi205.pdf
 
 [www.iowa-city.org]
 match = -45.5%%
@@ -517,8 +517,8 @@ title = Article Type (TYP) Field Codes
 url = https://www.wsp.wa.gov/wp-content/uploads/2024/06/NCICCodeManual-March-2024.xlsx
 
 [www.hilotherm.com]
-match = -18.2%%
-title = Best-of-Abstract-Vortrag Poster
+match = -54.5%%
+title = Oncology-Research-Treatment-online.pdf
 url = https://www.hilotherm.com/wp-content/uploads/2023/04/Oncology-Research-Treatment-online.pdf
 
 [pbnlaw.com]
@@ -740,4 +740,9 @@ url = https://monterey.org/Document Center/City Hall/City clerk/Charters/1913-Ch
 match = -26.7%%
 title = AKRON 1883-1884
 url = https://www.akronlibrary.org/images/SpecCol/akroncitydir1883-1884.pdf
+
+[www.uspto.gov]
+match = -109.1%%
+title = For sole by the Superintendent of Documents, U. S. ...
+url = https://www.uspto.gov/sites/default/files/documents/Roster-1958_January-through-December-1958.pdf
 
