--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-08-04 09:57:29
+lastsearch = 2024-08-04 14:50:43
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,9 +12,9 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -225.0%%
-title = @Dior Transfer Proof Lipstick (720 Forever Icone) #dior ...
-url = https://www.tiktok.com/@anneprettyness/video/7274035586653064479
+match = -6.2%%
+title = Huda Beauty Lip Stain
+url = https://www.tiktok.com/@thelipsticklesbians/video/7235411910361976106
 
 [www.diepxuan.com]
 match = -162.5%%
@@ -142,9 +142,9 @@ title = Camping Tent
 url = https://www.roadtripamerica.com/forum/showthread.php?48059-Camping-Tent
 
 [kllibrary.dbkl.gov.my]
-match = -87.5%%
-title = Search Results for Chinese, fiction
-url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/results.displaypanel.resultstoolbar.pagination.selectpage:handlepagingviasearchsession/3?qu=Chinese,++fiction&rw=300&pe=r:1&ic=true&ps=300&isd=true
+match = -68.8%%
+title = Search Results for Dreams -- Fiction
+url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/detailnonmodal.detail.mainpanel.fielddisplay.linktonewsearch?qu=Dreams+--+Fiction&ps=300
 
 [www.lemon8-app.com]
 match = -118.8%%
@@ -240,4 +240,9 @@ url = https://rltc309.com/shop/vljjrwrj-233/
 match = -143.8%%
 title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - nwgm300.com
 url = https://www.nwgm300.com/bag/vljjrwrj-233/
+
+[www.dmrw859.com]
+match = -193.8%%
+title = tui warmdream 16 - The third continent / Wings of Fire Book 16
+url = https://www.dmrw859.com/blog/vljjrwrj-233/
 
