CI images update

--- a/images/chieu-lac-soc-14/config.ini
+++ b/images/chieu-lac-soc-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-14.html
 lastopen = 2024-06-09 23:48:09
 
 [search]
-lastsearch = 2024-08-04 14:52:49
+lastsearch = 2024-08-04 15:24:31
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -42,9 +42,9 @@ title = Ho Chi Minh ZIP code - The most updated ...
 url = https://phaata.com/en/zip-code/ho-chi-minh-zip-code-1309.html
 
 [www.youtube.com]
-match = -156.2%%
-title = Độc lạ thú chơi "cây ăn thịt" của giới trẻ | VTC16
-url = https://www.youtube.com/watch?v=ibuNelPz4Lc
+match = -125.0%%
+title = Akshan 1 Chiêu Cuối 1 Mạng #shorts #vantung ...
+url = https://www.youtube.com/watch?v=95NRrIIzcBE
 
 [vietbis.vn]
 match = -193.8%%
@@ -133,8 +133,8 @@ url = https://kinhte.congthuong.vn/gia-vang-chieu-nay-1432024-vang-sjc-lai-tang-
 
 [vietstock.vn]
 match = -212.5%%
-title = Phân tích kỹ thuật phiên chiều 02/07: Tâm lý lạc quan dần ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-0207-tam-ly-lac-quan-dan-quay-tro-lai-585-1203736.htm
+title = Phân tích kỹ thuật phiên chiều 29/07: Tâm lý lạc quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-2907-tam-ly-lac-quan-dan-quay-tro-lai-585-1212641.htm
 
 [primagold.com.vn]
 match = -225.0%%
@@ -434,7 +434,7 @@ url = https://hanoionline.vn/mang-luoi-14-tuyen-duong-sat-do-thi-phu-khap-ha-noi
 [thaibinhjmp.vn]
 match = -268.8%%
 title = Bài 14: Đánh giá kết quả điều trị lệch lạc khớp cắn loại II sử dụng ...
-url = https://thaibinhjmp.vn/index.php/ojstbump/article/view/186?articlesBySameAuthorPage=26
+url = https://thaibinhjmp.vn/index.php/ojstbump/article/view/186?articlesBySameAuthorPage=10
 
 [bvtrungvuong.vn]
 match = -6.2%%
@@ -465,4 +465,9 @@ url = https://support.apple.com/vi-vn/guide/watch/apdde4d6f98e/watchos
 match = -212.5%%
 title = Top 9 phim chiếu rạp tháng 6/2024 gây sốt với đa dạng thể ...
 url = https://mobilecity.vn/tin-tuc/top-phim-chieu-rap-thang-6-2024-gay-sot.html
+
+[vtv.vn]
+match = -50.0%%
+title = Lịch phát sóng chương trình VTV
+url = https://vtv.vn/lich-phat-song.htm
 
