--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-04 13:47:56
+lastsearch = 2024-08-04 15:27:19
 
 [scholar.google.com]
 match = -43.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 4/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -175.0%%
-title = VÌ SAO REAL CÓ THỂ CHIÊU MỘ CẦU THỦ MIỄN PHÍ ĐỈNH ...
-url = https://www.youtube.com/watch?v=Uh7dDbqSuuQ
+match = -212.5%%
+title = Thu hồi giấy phép đơn vị đăng kiểm nếu sửa chữa dữ liệu ...
+url = https://www.youtube.com/watch?v=3dv_6YT-xqk
 
 [books.google.com]
 match = -156.2%%
@@ -725,4 +725,9 @@ url = https://gpbanmethuot.vn/song-dao/sntm-chua-nhat-tuan-18-thuong-nien-b-1657
 match = -187.5%%
 title = Tin tức sự kiện - Giao ban báo chí 6 tháng đầu năm 2024
 url = https://www.binhduong.gov.vn/tin-tuc/2024/08/908-giao-ban-bao-chi-6-thang-dau-nam-2024-giai-dap-nhieu-van-de-bao-chi-quan-ta
+
+[loichuahomnay.vn]
+match = -193.8%%
+title = Chúa nhật 18 Thường niên năm B - Bánh đích thực (Ga 6 ...
+url = https://loichuahomnay.vn/loi-chua-ngay-04082024-chua-nhat-18-thuong-nien-nam-b-banh-dich-thuc-ga-624-35
 
