--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-04 06:36:26
+lastsearch = 2024-08-04 15:15:14
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,14 +32,14 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -238.5%%
-title = Gani Lawal Posts 14 Points, 14 Rebounds vs. Sky Force
-url = https://www.youtube.com/watch?v=tJOSML4nQWo
+match = -146.2%%
+title = The Gummy Bear Song - Long English Version
+url = https://www.youtube.com/watch?v=astISOttCQ0
 
 [www.regmovies.com]
 match = -215.4%%
@@ -690,4 +690,9 @@ url = https://www.omnihotels.com/hotels/atlanta-battery
 match = -292.3%%
 title = EDC Las Vegas | May 16-18, 2025 | Las Vegas Motor Speedway
 url = https://lasvegas.electricdaisycarnival.com/
+
+[www.parker.com]
+match = -184.6%%
+title = THERMOSTATIC EXPANSION VALVES IDENTlFlCATlON
+url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-pdf-files/Sporlan-pdf-010/210-60.pdf
 
