--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-04 13:25:55
+lastsearch = 2024-08-04 15:16:39
 
 [www.diepxuan.com]
 match = 3.6%%
 title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOopOaJtUdRwMFESXD_hnXDJiJrCl9kxYYxzXTy5i3F86wTwDMLCg
+url = https://www.diepxuan.com/chan-ga-goi-mau.html
 
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOor4M656MqgKxHMOBtVRAvtZE4__3ecoAMEAkKIW35ikbBn5Cbd-
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
 
 [shopee.vn]
 match = -21.4%%
@@ -22,14 +22,14 @@ title = chăn ga gối - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
 url = https://shopee.vn/list/chăn ga gối
 
 [foreverbedding.net]
-match = -7.1%%
-title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
+match = -32.1%%
+title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Bộ chăn ga gối Elegance mã E18-10 chính hãng Sông Hồng
-url = https://changagoidemsonghong.com/chan-ga-goi-elegance-ma-e18-10
+match = 17.9%%
+title = Chăn ga gối Home mã H18-056 Sale 40%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
 
 [flexhouse.vn]
 match = -17.9%%
