--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-08-04 11:44:34
+lastsearch = 2024-08-04 15:19:47
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -127,8 +127,8 @@ title = Hội thi Tin học trẻ toàn quốc
 url = https://tinhoctre.vn/
 
 [capnuoctrungan.vn]
-match = -160.0%%
-title = Báo sự cố - Công Ty Cổ Phần Cấp Nước Trung An
+match = -33.3%%
+title = Báo sự cố
 url = https://capnuoctrungan.vn/Main/BaoSuCo/Create
 
 [dienbienphu.nhandan.vn]
