--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-04 11:46:50
+lastsearch = 2024-08-04 15:18:04
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = -3.2%%
-title = Chiếu Trúc Hạt Quế Lâm kích thước 2m2x2m [Được kiểm ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-2m2x2m-duo-c-kie-m-ha-ng-18050806-117250489.html
+match = -12.9%%
+title = Chiếu Trúc 1M Siêu Chất, Giá Ưu Đãi, Khuyến Mãi Hấp Dẫn
+url = https://www.sendo.vn/chieu-truc-1m.htm
 
 [www.lazada.vn]
 match = 16.1%%
