--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-04 13:24:28
+lastsearch = 2024-08-04 15:25:54
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOopsyjJP4uoeI0x0m3xy3jq3FDxiGRI6za7Swc6TDWYiUmvFWhgz
 
 [www.facebook.com]
 match = -77.8%%
@@ -47,14 +47,14 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -38.9%%
-title = Smartcore Pro Burbank Oak Lvp
-url = https://www.tiktok.com/discover/smartcore-pro-burbank-oak-lvp
+match = -77.8%%
+title = How Long to Cook Nem Nuong in Air Fryer
+url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOoqqsrz3fhQxrOBGm51H8A5XMooGquIGrpX8kVRQDVWR37xu6QUV
 
 [m.facebook.com]
 match = -122.2%%
